--- a/localisation/KR_Sichuan_l_simp_chinese.yml
+++ b/localisation/KR_Sichuan_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
- SZC_totalist_party:0 "国民党"
- SZC_totalist_party_long:0 "国民党(Kuomintang)\n§L国民党在四川的影响力主要由军官系的游击队、在城市地区和遍布乡间的少数几个秘密政治结社所体现。其中，军官系最能直接发挥政治影响，虽然希望渺茫但却是将三民主义引入四川的最合理选项。但不同于那些坚持不懈而鲁莽的展示他们意识形态狂热的激进宣传分子和农民领袖，军官系是谨小慎微的。省内仍然有宣扬诸如工团主义和汪精卫思想在内的极端信念的少数几个组织，他们对军官系来说仍然是很有用的帮手，不过这些组织本身无足轻重。§!"
+ SZC_totalist_party:0 "工团党"
+ SZC_totalist_party_long:0 "川康根据地\n§L张国焘在工团党内长年都是一个较为例外的角色，尽管他是该党的元老功勋，但是他的主张长期以来都与主流的陈独秀、李立三等人不和，尤其是对国民党的态度上更是针尖对麦芒，这样的矛盾到了1927年国民党的大溃败便一泻千里。他先是辗转武汉、南昌等地，在与湖南重建中央的董必武等人交流后远赴四川组织革命，他收拢四川的国民党残部与当地的邓小平等人一起组织起武装根据地。利用四川复杂的地形、军阀成分和民族关系割据一方。§!"
  SZC_syndicalist_party:0 "国民党"
  SZC_syndicalist_party_long:0 "国民党(Kuomintang)\n§L国民党在四川的影响力主要由军官系的游击队、在城市地区和遍布乡间的少数几个秘密政治结社所体现。其中，军官系最能直接发挥政治影响，虽然希望渺茫但却是将三民主义引入四川的最合理选项。但不同于那些坚持不懈而鲁莽的展示他们意识形态狂热的激进宣传分子和农民领袖，军官系是谨小慎微的。省内仍然有宣扬诸如工团主义和汪精卫思想在内的极端信念的少数几个组织，他们对军官系来说仍然是很有用的帮手，不过这些组织本身无足轻重。§!"
  SZC_radical_socialist_party:0 "国民党"
@@ -36,30 +36,53 @@
  SZC_Self_Government_Party_long:0 "自治政府党(Zizhi Zhengfu Dang)"
  SZC_Three_Principles_Party:0 "三民党"
  SZC_Three_Principles_Party_long:0 "三民党(Sanmin Dang)"
+ SZC_yang_sen: "杨森"
  POLITICS_SZC_YANG_SEN_DESC:0 "杨森参军要追溯到1904年他报考四川陆军速成学堂。杨森在1906年四川陆军弁目队时秘密加入了中国同盟会。1908年毕业后，他进入了当时的清朝新军服役，直到1911年。杨森的背景以及同盟会的关系使得他在辛亥革命爆发后声名鹊起。后来，在蔡锷将军手下效力时，他于1921年终于擢升为了一名将军，被委派管理重庆。当1925年杨森成为了吴佩孚的盟友时，这种利用政治关联而非战功升官的模式得以延续。随着直系军阀称霸中原，大清帝国复辟，杨森被任命为了四川省督理。\n\n作为四川省督理，杨森因他不同于其他军阀的社会经济领域快速现代化的执政纲领而声名鹊起，并主导推行了一大批旨在改善四川人民生活的基建工程和教育项目。尽管他是一位成功的军事领导人，但是杨森的成功主要还是归功于他能在恰当的时间同恰当的人达成交易、获取支持——而这一现状把他和武备系置于了危险的境地之中。同时，由于他宣称的“为了四川好”的措施号召同他个人的生活方式截然相反，这种“表率作用”更是进一步削弱了他在公众中的支持率。举例来讲，由于他抨击传统观念下妇女处于不平等地位并公开禁止缠足而拉满了保守派的仇恨，然后立马因为自己娶了八个姨太太并和她们生了三十几个孩子而挥霍掉改良派人士对他释放出的所有好感。\n\n尽管缺点良多，依靠着军队和市井小民的支持，杨森仍成功掌握着权力，成为一股不容小觑的力量。只要他掌权，直系军阀总能在成都找到一位可靠的盟友。"
- POLITICS_SZC_LIU_CUNHOU_DESC:0 "生于一个富裕盐商家庭的刘存厚，与其说是一位战略家，不如说是一个野蛮的土匪，更谈不上什么统治者了。1903年，他考入四川武备学堂，然后在1907年赴日留学，1908年学成毕业后回到四川。刘存厚在辛亥革命期间因为举义反清而一举成名，最初他率领的是一些小规模的剿匪部队，但他对上级的忠心赢得了上级信任后，刘存厚开始指挥规模较大的部队。然而，在进行军事行动时，他的部队往往更关心打家劫舍而不是完成军事目标。虽然他的士兵表现得像一群土匪，但是他也在一系列的行动中稳固了自己在四川的地位——尽管他很难获得人民群众的喜爱。\n\n在四川内战中，刘存厚几乎没有为武备系做出什么大贡献（尽管他的部队人数充足，足以开创战机）。鉴于他的绝大多数军事经验都是“剿匪”，他的部队在内战的绝大多数时间里都是负责清剿国民党游击队以及被击溃后四处游荡的实业团残兵。正因如此，他的部队相比其他武备系军队来说实力基本保存完好，并最终使得他能在战后取代了他所谓的老朋友杨森。\n\n作为四川省督的刘存厚，他的统治不过是一种事实上更为大规模的匪盗活动。他向人民群众征收数不尽的税收，利用军队敲诈勒索四川的富人穷鬼。他最终迅速成为了一名受人憎恨的暴君，主要靠着暴力镇压和无耻的贿赂来维持自己的权力。"
+ POLITICS_SZC_YANG_SEN_ARMY_DESC:0 "§Y生于：§!§L1884年2月20日；大清帝国、四川省广安§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L杨森的军事生涯能追溯到1904年他报考四川陆军速成学堂。1908年毕业后，他进入了当时的清朝新军服役，直到1911年。杨森的背景以及同盟会的关系使得他在辛亥革命爆发后声名鹊起。后来，在蔡锷将军手下效力时，1921年他被擢升为了一名将军，并被蔡锷委派管理重庆。在杨森管辖重庆期间，他同本省的其他军阀日益不和，尤其是熊克武和刘湘。虽然杨森曾尝试压制这些对手，然而他却从没有完成过他的目标。\n\n杨森当上四川督理靠的不是军功，而是主要靠他同吴佩孚以及直系军阀的关系。话虽如此，杨森也绝非滥竽充数的军事将领，他之前的作战中表现出色，并在担任四川督理期间一直保障着武备系的优势地位。§!"
+ SZC_liu_xiang: "刘湘"
  POLITICS_SZC_LIU_XIANG_DESC:0 "1920年，刘湘率领川军大胜滇军后声名鹊起。他一步步晋升，最终在北伐战争期间率领一大批川军迎战国民党北伐军。在北伐战争期间，他依靠着无数次胜利为自己博得了精于战阵但同时又鲁莽短视的名声。北伐战争结束后，他带领川军荣归四川，被任命为重庆镇守使。\n\n尽管在北伐战争期间他成功建立起了自己的小集团并成为了川内一股不容小觑的力量，但是他却从未得到过梦寐以求的督理四川的权力。相反，他被任命为了杨森——直系政府和吴佩孚的忠实跟班——的下属。刘湘视这一举动为直系政府予他的侮辱，视这一切为直系政府卑鄙的任人唯亲。因此，直系军阀和他们的傀儡武备系引起了刘湘产生了深深地仇恨。\n\n这种仇恨最终导致他在1936年清政府的霸权瓦解后抓住了时机。在成功的团结起了他在实业团中的拥护者推翻了杨森后，刘湘成功亲自拿下了自己梦寐以求的成都，通过四川内战期间一系列大胆的军事冒险行动一箭双雕的击败了武备系和保定系。在宣布自己为四川省督军，将四川省会从成都迁往实业团的大本营重庆后，他对四川展开了一系列激进的现代化项目，以求有朝一日彻底和直系政府算个总账。"
+ POLITICS_SZC_LIU_XIANG_ARMY_DESC:0 "§Y生于：§!§L1888年7月1日；大清帝国、四川省大邑县§!\n§Y派系：§!§P实业团§!\n§Y背景：§!§L当刘湘于1909年从四川陆军速成学堂毕业后，他在川军内部迅速升迁，到1919年更是成为四川总司令。1920年川滇战争爆发后，刘湘在击退入侵的外省军阀部队时取得了个人军旅生涯的首次大捷。当1921年川滇战争结束后，他被委任为重庆镇守使。在任期间，他将自己打造为了一股绝不容小觑的力量，并在四川省的工业中心地带建设了相当稳固的影响力。\n\n在国民党发起了北伐运动后，刘湘率领自己的部队出川阻击北伐军。在北伐战争期间，刘湘因为自己一系列坚定的防御战和不时发动的鲁莽反攻为自己赢得了骁勇善战的名声。国民党败北后，刘湘率军回到四川，臣服于时任四川督理杨森的权势之下。尽管他视这种臣服为一种侮辱，不过他仍然保有相当大一支忠诚于他的军队。很大程度上由于他镇压了北伐运动，他被人视作一位可敬的军事将领和一位权势在握的大军阀。§!"
+ SZC_tang_shizun: "唐式遵"
+ SZC_tang_shizun_commander_desc:0 "§Y生于：§!§L1883年；大清帝国、四川省仁寿县§!\n§Y派系：§!§P实业团§!\n§Y背景：§!§L唐式遵原本会按照父亲的安排成为一名学者，但他却毅然选择投笔从戎。1906年，唐式遵开始从军，后入读四川陆军速成学堂，与潘文华、刘湘、王瓒绪和杨森等人同班。唐式遵与潘文华是第33旅的战友，两人最终都在老友刘湘帐下效力。\n\n和潘文华一样，唐式遵也为刘湘出力不少。1916年蔡锷攻入四川时，正是他的提议，使得刘湘在与滇军的战斗中多次取胜。唐式遵历来是雄心勃勃、渴望晋升，但却不得不活在刘湘的阴影下，这让他倍感不满。\n\n尽管有着远大的抱负，但唐式遵还是选择继续忠于刘湘，并为其出谋划策。§!"
+ SZC_guo_xunqi: "郭勋祺"
+ SZC_guo_xunqi_high_command_desc:0 "§Y生于：§!§L1895年；大清帝国、四川省华阳县§!\n§Y派系：§!§S左派§!\n§Y背景：§!§L郭勋祺出生于一个农民家庭，1912年应募成为士兵，后随军西征入藏。1915年回到成都后，他投效潘文华部，并从排长升到团长。1921年，潘氏投靠刘湘并升任川军第4师师长，郭勋祺也随之成为其部下第7旅旅长。此后，郭勋祺一直与潘文华在刘湘麾下共事，与此同时他也与陈毅也建立了友谊。据说在国民党领导的北伐战争期间，郭勋祺积极参与了四川的左派起义。而当川系军阀对社会主义运动痛下毒手后，郭勋祺也为左派领袖提供了一定帮助。§!\n\n§Y备注：据传，郭勋祺强烈同情左派，甚至与刘伯承等人有直接接触。因此，他和刘湘之间常常发生摩擦，二人也互不信任。§!"
+ SZC_deng_xihou: "邓锡侯"
  POLITICS_SZC_DENG_XIHOU_DESC:0 "邓锡侯的军旅生涯始于1906年，之后又报考了保定陆军军官学堂，不过当辛亥革命爆发后，他毅然辍学回川参加革命。在1923年升任将军前，邓锡侯屡屡高升。在中国这个动荡的大舞台上，他露面于政坛前后的次数远多于露面于冲锋陷阵之时，一方面他因此博得了一个值得信赖而能力出众的野心家的名声，但另一方面他也没有从台前幕后的举动中博得太多名望和财富。虽然他获得了保定系内各位校友的尊敬，但是他最终还是选择寄居于杨森之下——毕竟执掌大权的直系政府相比于保定系，更喜欢武备系。\n\n虽然没有获得直系军阀的青睐，保定系还是设法同武备系达成了合作，最终使得保定系有机会填补1936年四川内战后因杨森派系垮台带来的四川权力真空。作为保定系中保守派的代表人物，他的改革主要集中于发展乡村地区并改善四川农民的生活状况。由于他同时受到了农村地区和军队的支持，加之保定系二把手刘文辉积攒的社会支持，保定系在政治上获得了不同于中国绝大多数军阀的灵活性。邓锡侯致力于将四川建设为全中国的一个模范省，把建设四川放到所谓崇高意识形态或是扩张野心的前头。"
+ POLITICS_SZC_DENG_XIHOU_ARMY_DESC:0 "§Y生于：§!§L1889年5月24日；大清帝国、四川省营山县§!\n§Y派系：§!§c保定系§!\n§Y背景：§!§L当邓锡侯1906年参军后，他随即进入了成都陆军小学堂学习。1909年毕业后，邓锡侯又考入了保定军校。辛亥革命爆发后，邓锡侯辍学回乡，投身军旅以实战代替理论指导。中华民国成立后，邓锡侯投到刘存厚的川军第四师下任职。邓锡侯初任副官，1916年升任营长，1917年升任第五旅旅长，然后在1918年2月任独立旅旅长。邓锡侯率军参与了1920年至1923年川滇黔三省一系列的冲突，并因表现良好而升任第三师师长。1923年12月，由直系军阀控制的北京政府晋升他为将军。在杨森成为四川督理后，邓锡侯向他臣服，因而继续保有自己的将军军衔。\n\n邓锡侯是一个彻头彻尾的野心家，在他成为四川的保定军校校友中最引人注目的人之前，他的军事履历里驻防、调动和升职的次数都远多于他的实战次数。尽管没人会质疑他是否可胜任自己的工作，但是与自己身经百战的同行比起来，他过去的军事经验更多算是纸上谈兵。§!"
+ SZC_liu_wenhui: "刘文辉"
  POLITICS_SZC_LIU_WENHUI_DESC:0 "作为一名资深军人，刘文辉自从13岁起就开始了自己的军旅生涯。1911年他从四川陆军小学毕业后，又在1914年报考了保定军校，并在1916年毕业。虽然他的成功与影响力大多是靠裙带关系和私人轻易得来的，但至少他通过这些办法成为了圈子内部一个受人尊敬而富有影响力的人物。在北伐战争结束后，刘文辉彻底的同邓锡侯站到了一起，并成为了保定系集团中最臭名昭著的成员之一。\n\n在四川内战中击败了他的侄子刘湘后，保定系登上了权力的巅峰。他同邓锡侯的友谊为他在双头体制内部赢得了一把领导人的交椅——这同他侄子的个人专制形成了鲜明对比——而他在双头体制内部代表着更倾向改革的分支。他在军队和城市化水平较高地区的行政阶层中十分受欢迎；他帮助了保定系扩大了支持者的基本盘，让保定系的支持者远远超过了那些拥护邓锡侯的保守派。虽然他不太可能作为中国伟大的军事家登上中国的史书，但是只要这个双头体制政权继续存续下去、二人的友谊和协作能够延续，他必然会被那些渴望迅速现代化以及改善四川省诸多现状的人民们铭记。"
- POLITICS_SZC_XIONG_KEWU_DESC:0 ""
- POLITICS_SZC_LU_CHAO_DESC:0 ""
- POLITICS_SZC_TIAN_SONGYAO_DESC:0 ""
- POLITICS_SZC_ZHANG_LAN_DESC:0 ""
- POLITICS_SZC_HE_GUOGUANG_DESC:0 ""
- POLITICS_SZC_YANG_SEN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1884年2月20日\n大清帝国 四川省 广安\n§Y军旅生涯：§L\n杨森参军要追溯到1904年他报考四川陆军速成学堂。1908年毕业后，他进入了当时的清朝新军服役，直到1911年。杨森的背景以及同盟会的关系使得他在辛亥革命爆发后声名鹊起。后来，在蔡锷将军手下效力时，1921年他被擢升为了一名将军，并被蔡锷委派管理重庆。在杨森管辖重庆期间，他同本省的其他军阀日益不和，尤其是熊克武和刘湘。虽然他曾尝试压制这些对手，然而杨森却从没有完成过他的目标。\n\n他的四川省督理一职，主要是靠他同吴佩孚以及直系军阀的关系而得来的（而非军功）。虽然如此，杨森也绝不是一个不称职的军事将领，因为他之前的作战中表现出色，并在担任四川督理期间一直保障着武备系的优势地位。"
- POLITICS_SZC_LIU_CUNHOU_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1884年\n大清帝国 四川省\n§Y军旅生涯：§L\n1903年，刘存厚考入四川武备学堂。他在1907年赴日，于日本陆军士官学校就读，1908年毕业后随即回国。他的军事履历起步于辛亥革命前后，并被他的北洋系上司提拔为中将。他后来领导了一系列剿匪行动，这番经历助他赢得了上级的信任，最终让他获得了一支部队的临时领导权。不过，似乎这和他是否真的有军事才能关系不大，毕竟在军阀混战的动荡时期，上级更看重忠诚而不是其他要素。\n\n虽然他最终成功扫灭了土匪、获得了上级的青睐，但是在地方上他只为自己挣得了骂名——毕竟他的部队并不比他所剿灭的土匪好到哪去。大兵过处，就连百姓的一针一线都被卷个精光。由于刘存厚贪婪无比、漠视军事理论、无视军队纪律，他的绝大多数同行对他的评价都极其糟糕；而在刘存厚职业生涯的绝大部分时间里，他都很难能称得上一个有军事智慧的人。尽管如此，他仍然可以算是一个残暴军阀的代表，他设法为自己积聚起了足够的财富和不容小觑的势力。\n\n他最终选择效命于杨森，负责维持川北一带的“秩序”。尽管他的军事履历污点重重，之前他效忠于直系军阀的经历还是为他在武备系内部谋得了一份高位。"
- POLITICS_SZC_LIU_XIANG_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1888年7月1日\n大清帝国 四川省\n§Y军旅生涯：§L\n当刘湘于1909年从四川陆军速成学堂毕业后，他在川军内部迅速升迁，到1919年更是成为四川总司令。1920年川滇战争爆发后，刘湘在击退入侵的外省军阀部队时取得了个人军旅生涯的首次大捷。当1921年川滇战争结束后，他被委任为重庆镇守使。在任期间，他将自己打造为了一股绝不容小觑的力量，并在四川省的工业中心地带建设了相当稳固的影响力。\n\n在国民党发起了北伐运动后，刘湘率领自己的部队出川阻击北伐军。在北伐战争期间，刘湘因为自己一系列坚定的防御战和不时发动的鲁莽反攻为自己赢得了骁勇善战的名声。国民党败北后，刘湘率军回到四川，臣服于时任四川督理杨森的权势之下。尽管他视这种臣服为一种侮辱，不过他仍然保有相当大一支忠诚于他的军队。很大程度上由于他镇压了北伐运动，他被人视作一位可敬的军事将领和一位权势在握的大军阀。"
- POLITICS_SZC_DENG_XIHOU_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1889年\n大清帝国 四川省\n§Y军旅生涯：§L\n当邓锡侯1906年参军后，他随之进入了成都陆军小学堂学习。1909年毕业后，邓锡侯随即报考了保定军校。辛亥革命爆发后，邓锡侯辍学回乡，投身军旅以实战代替理论指导。中华民国建立后，邓锡侯投到刘存厚的川军第四师下任职。邓锡侯初任副官，1916年升任营长，1917年升任第五旅旅长，然后在1918年2月任独立旅旅长。邓锡侯率军参与了1920年至1923年川滇黔三省一系列的冲突，并因表现良好而升任第三师师长。1923年12月，由直系军阀控制的北京政府晋升他为将军。当杨森成为四川督理后，邓锡侯因臣服于前者而继续保有自己的将军军衔。\n\n邓锡侯是一个彻头彻尾的野心家，在他成为四川的保定军校校友中最引人注目的人之前，他的军事履历里驻防、调动和升职的次数都远多于他的实战次数。尽管没人会质疑他是否可胜任自己的工作，但是与自己身经百战的同行比起来，他过去的军事经验更多算是纸上谈兵。"
- POLITICS_SZC_LIU_WENHUI_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1895年\n大清帝国 四川省 大邑县\n§Y军旅生涯：§L\n刘文辉与军旅结缘还要多亏1911年时自己的大哥刘文渊带他前往四川陆军小学报名入试。某种意义上来说这个头开的很“合适”，因为接下来他的人生中取得的绝大多数成就，大多要归功于他的哥哥刘文彩及侄子刘湘带给他的裙带关系——或者是某个小团体内部勾连的成果，比如他在1914年考入保定军校后建立的人脉。虽然1916年从保定军校毕业后，他被公认为一名勤劳肯干的军人，但是他的履历也有诸多令人不满之处。最值得注意的是，在他治下，西康省西部的部分地区被西藏所占领。虽然他早期的军事履历差强人意，但是他在保定系内的人脉和他在城市地区一定的名望让他成为了一股不可小觑的势力。"
- POLITICS_SZC_XIONG_KEWU_ARMY_DESC:0 ""
- POLITICS_SZC_LU_CHAO_ARMY_DESC:0 ""
- POLITICS_SZC_WANG_ZUANXU_ARMY_DESC:0 ""
- POLITICS_SZC_WANG_LINGJI_ARMY_DESC:0 ""
- POLITICS_SZC_PAN_WENHUA_ARMY_DESC:0 ""
- POLITICS_SZC_TIAN_SONGYAO_ARMY_DESC:0 ""
- POLITICS_SZC_FAN_SHAOZENG_ARMY_DESC:0 ""
- POLITICS_SZC_LIU_BOCHENG_ARMY_DESC:0 ""
- POLITICS_SZC_HE_GUOGUANG_ARMY_DESC:0 ""
+ POLITICS_SZC_LIU_WENHUI_ARMY_DESC:0 "§Y生于：§!§L1895年1月10日；大清帝国、四川省大邑县§!\n§Y派系：§!§m保定系§!\n§Y背景：§!§L刘文辉与军旅结缘还要多亏1911年时自己的大哥刘文渊带他前往四川陆军小学堂报名入试。某种意义上来说这个头开得很“合适”，因为接下来他的人生中取得的绝大多数成就，大多要归功于他的哥哥刘文彩及侄子刘湘带给他的裙带关系——或者是某个小团体内部勾连的成果，比如他在1914年考入保定军校后建立的人脉。虽然1916年从保定军校毕业后，他被公认为一名勤劳肯干的军人，但是他的履历也有诸多令人不满之处。最值得注意的是，在他治下，西康省西部的部分地区被西藏所占领。虽然他早期的军事履历差强人意，但是他在保定系内的人脉和他在城市地区一定的名望让他成为了一股不可小觑的势力。§!"
+ SZC_zhou_daogang: "周道刚"
+ SZC_zhou_daogang_commander_desc:0 "§Y生于：§!§L1875年；大清帝国、四川省双流§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L1904年从日本毕业归国后，周道刚在接下来的几年里担任四川武备学堂监学兼军事教习。1911年辛亥革命爆发后，他先是出任川军总办，随即又被召至北京担任顾问，并于此时加入了进步党。护国运动爆发后，周道刚支持蔡锷，并被任命为四川陆军第一师师长。在1917年短暂担任四川督军后，一直到1925年杨森掌权时，周道刚都处于边缘地位。受杨森之邀，他于北伐战争中出任指挥官。随着杨森权力的巩固，周道刚十年来一直享受着将军待遇，四川的现状令他颇感满意。§!"
+ SZC_liu_cunhou: "刘存厚"
+ POLITICS_SZC_LIU_CUNHOU_DESC:0 "生于一个富裕盐商家庭的刘存厚，与其说是一位战略家，不如说是一个野蛮的土匪，更谈不上什么统治者了。1903年，他考入四川武备学堂，然后在1907年赴日留学，1908年学成毕业后回到四川。刘存厚在辛亥革命期间因为举义反清而一举成名，最初他率领的是一些小规模的剿匪部队，但他对上级的忠心赢得了上级信任后，刘存厚开始指挥规模较大的部队。然而，在进行军事行动时，他的部队往往更关心打家劫舍而不是完成军事目标。虽然他的士兵表现得像一群土匪，但是他也在一系列的行动中稳固了自己在四川的地位——尽管他很难获得人民群众的喜爱。\n\n在四川内战中，刘存厚几乎没有为武备系做出什么大贡献（尽管他的部队人数充足，足以开创战机）。鉴于他的绝大多数军事经验都是“剿匪”，他的部队在内战的绝大多数时间里都是负责清剿国民党游击队以及被击溃后四处游荡的实业团残兵。正因如此，他的部队相比其他武备系军队来说实力基本保存完好，并最终使得他能在战后取代了他所谓的老朋友杨森。\n\n作为四川省督的刘存厚，他的统治不过是一种事实上更为大规模的匪盗活动。他向人民群众征收数不尽的税收，利用军队敲诈勒索四川的富人穷鬼。他最终迅速成为了一名受人憎恨的暴君，主要靠着暴力镇压和无耻的贿赂来维持自己的权力。"
+ POLITICS_SZC_LIU_CUNHOU_ARMY_DESC:0 "§Y生于：§!§L1884年1月24日；大清帝国、四川省简州§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L1903年，刘存厚考入四川武备学堂。他在1907年赴日，于日本陆军士官学校就读，1908年毕业后随即回国。他的军事履历起步于辛亥革命前后，并被他的北洋系上司提拔为中将。他后来领导了一系列剿匪行动，这番经历助他赢得了上级的信任，最终让他获得了一支部队的临时领导权。不过，似乎这和他是否真的有军事才能关系不大，毕竟在军阀混战的动荡时期，上级更看重忠诚而不是其他要素。\n\n虽然他最终成功扫灭了土匪、获得了上级的青睐，但是在地方上他只为自己挣得了骂名——毕竟他的部队并不比他所剿灭的土匪好到哪去。大兵过处，就连百姓的一针一线都被卷个精光。由于刘存厚贪婪无比、漠视军事理论、无视军队纪律，他的绝大多数同行对他的评价都极其糟糕；而在刘存厚职业生涯的绝大部分时间里，他都很难能称得上一个有军事智慧的人。尽管如此，他仍然可以算是一个残暴军阀的代表，他设法为自己积聚起了足够的财富和不容小觑的势力。\n\n他最终选择效命于杨森，负责维持川北一带的“秩序”。尽管他的军事履历污点重重，之前他效忠于直系军阀的经历还是为他在武备系内部谋得了一份高位。§!"
+ SZC_xiong_kewu: "熊克武"
+ SZC_xiong_kewu_leader_desc:0 "§Y生于：§!§L1885年12月26日；大清帝国、四川省井研县§!\n§Y背景：§!§L$SZC_xiong_kewu_bio$\n\n借着近来在四川内战中夺取的胜利果实，熊克武将把四川打造为共和派坚不可摧的堡垒，替多年来掌控北京的强人们送去终末。§!"
+ SZC_xiong_kewu_army_chief_desc:0 "§Y生于：§!§L1885年12月26日；大清帝国、四川省井研县§!\n§Y背景：§!§L$SZC_xiong_kewu_bio$§!"
+ SZC_xiong_kewu_bio:0 "熊克武出生于一个医生家庭，早年有志于学问。熊克武在学习中受到西方的民主与现代化理念影响，愈发感叹中国落后于时代大势。1903年，熊克武入四川东文学堂学习，不久后结识了戴季陶等革命者。同年冬，在他叔父筹资相助下，熊克武东渡日本求学，并在日本结识了孙中山，参加了同盟会。辛亥革命爆发后，熊克武受任为大汉四川军政府的军官。直至1913年，由于袁世凯的北洋政府武力驱逐了孙中山，熊克武也不得不流亡日本。\n\n尽管如此，失败却并没有摧垮熊克武对自由中国的追求。在流亡日本与东南亚期间，他不断为革命募集资金，最终在护国讨袁的护国战争中归国，同蔡锷一道举义倒袁成功。虽然在护国战争中曾并肩作战，1920年熊克武不得不把枪口对准了同僚吕超，并在军阀刘存厚的协助下将吕超逐出四川。同年，他发表“四川自治”宣言，宣布不从属于任何一个从军阀乱世中兴起的政府——不论它是北京政府还是广州政府。然而，他的这番豪情壮志并不长久：四川再度陷入混战，刘存厚和北洋政府联手把熊克武逼上了漫漫流亡路。1924年，熊克武流亡广东，加入了中国国民党且参加了国民党一大。\n\n熊克武短暂的国民党党员生涯结束于1925年，汪精卫和蒋介石用“熊克武阴谋勾结联省党人头目陈炯明”的借口将他开除出党。在北伐战争完全失败，国民党大崩溃后，政坛失意的熊克武返回四川。不过，他心中对共和中华的执意尚未熄灭。"
+ SZC_lu_chao: "吕超"
+ SZC_lu_chao_leader_desc:0 "§Y生于：§!§L1890年3月9日；大清帝国、四川省宜宾县§!\n§Y背景：§!§L$SZC_lu_chao_bio$\n\n如今，共和派在四川大获全胜，吕超已然成为共和派国民党与联省派之间脆弱联盟的领导人。现在，吕超已经准备好将先总理设想的那个自由民主新中国落到实处了。§!"
+ SZC_lu_chao_army_chief_desc:0 "§Y生于：§!§L1890年3月9日；大清帝国、四川省宜宾县§!\n§Y派系：§!§P国民党§!\n§Y背景：§!§L$SZC_lu_chao_bio$§!"
+ SZC_lu_chao_bio:0 "吕超是四川本地人，1909年毕业于四川陆军小学堂。之后，吕超进入了南京的陆军第四中学堂。在宁期间，吕超为孙中山的革命理念所倾倒并参加了中国同盟会，为一个自由的共和中华不懈奋斗。和许多四川人一样，吕超于1910年升入保定军校学习，直到1911年辛亥革命爆发后才离开保定。之后，吕超客居上海，同陈其美、汪精卫、李石曾等人（皆为孙中山的左膀右臂）共事，直到袁世凯掌权后才不得不流亡回川。\n\n1915年，讨袁护国一役打响后，吕超随熊克武一道在四川响应蔡锷义军。当陈炯明的联省派试图把孙中山赶出广东时，吕超选择站到孙先生一侧，同往日的同志熊克武争夺四川。之后，吕超败北，流亡上海同孙中山会合。在1923年孙中山返回广东时，吕超已经成为他在党内最信任的同志之一。在堪比灾难的北伐战争期间，吕超曾是川人北伐的代表；当北伐运动失败后，吕超则不得不逃回四川老家避难。不过，“周公恐惧流言日”，虽然外界多有流言蜚语，但吕超心中的革命精神可仍未熄灭。他在韬光养晦之时，始终未忘先总理教诲。在杨森治下他蛰伏于四川，等待有朝一日重掌大局，并始终未曾中断与全国各地国民党同志的联络。"
+ SZC_wang_zuanxu: "王缵绪"
+ SZC_wang_zuanxu_army_chief_desc:0 "§Y生于：§!§L1886年；大清帝国、四川省西充县§!\n§Y派系：§!§m保定系§!\n§Y背景：§!§L王缵绪是刘湘、杨森和潘文华的同学，他毕业于四川陆军速成学堂。民国时期，王缵绪在支持北京政府的刘湘军中服役。1920年的川滇战争期间，刘湘将王缵绪调给了杨森。同年，王缵绪晋升为旅长，并统治了四川南部。在他统治期间，四川南部的农田、水利、道路、监狱等方面都得到了改善，他还促进了留学事业的发展。\n\n1922年，杨森与对手四川军阀熊克武开战，但杨森战败。杨森和王缵绪逃离四川，向吴佩孚投诚。多亏了吴佩孚的提携，杨森和王缵绪才得以东山再起，重返四川政坛。随后杨森与刘湘结盟，将支持广州政府的熊克武赶出了四川。次年，杨森攻入成都，并让王缵绪负责管理该地。在此期间，王缵绪开发了春熙路，修建了少城公园、公交车站、公共厕所，并强制推行义务教育。\n\n1925年，杨森试图完全控制四川，但遭到所有未得到广州政府支持的四川军阀联合反对。王缵绪被说服倒戈加入了刘湘的军队，杨森的计划被迫终止。后来驻军紫阳时，王缵绪发展了当地的教育事业。十年以来，四川的和平一直岌岌可危，而在此期间，王缵绪与刘文辉的保定系越走越近。§!"
+ SZC_wang_lingji: "王陵基"
+ SZC_wang_lingji_army_chief_desc:0 "§Y生于：§!§L1883年；大清帝国、四川省乐山县§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L王陵基生于丝绸商人家庭，曾于四川和日本求学。王陵基1910年加入川军，在辛亥革命期间保持中立。1913年晋升为团长，在熊克武的指挥下镇压了四川的革命力量。护国运动爆发后，他选择支持袁世凯并与护国联盟作战。虽然他成功占领了成都，但随后又被滇军打败，并被解除了指挥权。1921年，王陵基加入了杨森麾下并担任其参谋长，但当杨森被迫离开四川后，他又投靠了刘湘。北伐结束后，王陵基仍是刘湘名义上的下属，但人们普遍认为他更倾向于杨森而非刘湘。§!"
+ SZC_pan_wenhua: "潘文华"
+ SZC_pan_wenhua_high_command_desc:0 "§Y生于：§!§L1886年10月16日；大清帝国、四川省仁寿县§!\n§Y派系：§!§P实业团§!\n§Y背景：§!§L潘文华生于一户贫苦人家，他的双亲先后因病去世，潘文华因此被迫离家出走，在帽店当学徒，生活极为困苦。受到晚清新军的吸引，他经常观看士兵们的操练，甚至会参与他们的体能训练。当地的新军士兵发现了潘文华的兴趣后，便劝他吃粮当兵。\n\n潘文华在军械方面展现出了非凡天赋，他的军事成绩一路突飞猛进。为了响应辛亥革命，潘文华揭竿而起，并成功击败了后来入侵四川的滇军。潘文华与刘湘是同学，刘湘曾多次出手帮助这位贫困的将军，作为回报，两人结成了亲密友谊，并成为了彼此的知己。\n\n作为刘湘的军事顾问、战略家和朋友，潘文华对刘湘和革命思想都十分忠诚，因此在两人间产生了意识形态分歧。§!"
+ SZC_tian_songyao: "田颂尧"
+ SZC_tian_songyao_leader_desc:0 "§Y生于：§!§L1888年；大清帝国、四川省简阳§!\n§Y背景：§!§L$SZC_tian_songyao_bio$§!"
+ SZC_tian_songyao_high_command_desc:0 "§Y生于：§!§L1888年；大清帝国、四川省简阳§!\n§Y派系：§!§P田颂尧部§!\n§Y背景：§!§L$SZC_tian_songyao_bio$§!"
+ SZC_tian_songyao_bio:0 "1912年，田颂尧加入了刘存厚的四川省陆军第四师。尽管清朝时田颂尧是同盟会成员，但在1913年的二次革命中，他却选择与袁世凯结盟。几年后他又随刘存厚讨伐袁世凯，并在其手下任团长一职。1917年，刘存厚率部夺取成都、占领重庆并成功驱逐了四川境内的云贵两省军队。\n\n同年12月，唐继尧重燃战火并将刘存厚赶出成都。北京当局将刘存厚的军队重组为第21师，田颂尧被任命为少将旅长。年底，刘存厚又任命田颂尧为第21师师长。刘存厚选择与刘湘结盟，两人合力将熊克武赶出了四川。1920年，熊克武又与刘湘结盟反对滇系，并将滇军赶出了四川。次年，熊克武再度与刘湘联手将刘存厚逐出了四川。\n\n田颂尧的第21师在四川的新权力版图中取得了一席之地。1922年，刘湘被刘成勋打败，刘成勋借机夺取了刘湘的大部分地盘。保定系的邓锡侯对战果分配感到不满，说服了同为保定军校毕业生的田颂尧一同对抗刘成勋，最终联手取胜。当刘存厚作为杨森的下属重返四川时，田颂尧又与他的老上司重新结盟，但他同时也与其他军阀保持着联系。"
+ SZC_fan_shaozeng: "范绍增"
+ SZC_fan_shaozeng_commander_desc:0 "§Y生于：§!§L1894年；大清帝国、四川省大竹县§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L江湖诨号“范哈儿”和“大老造”，年轻时的范绍增是一名相当离经叛道的学生。受绿林好汉等劫富济贫人物的启发，范绍增加入了革命组织“哥老会”。辛亥革命期间，范绍增参加了反清起义，并加入了同盟会。他后来又参与了护国运动，并成为了当地哥老会的领导人。\n\n1920年，范绍增参与了唐继尧推翻熊克武的行动，并卷入了四川军阀的纷争。最终，他投靠了杨森。范绍增继续发展壮大着四川哥老会的人脉和实力，与上司的关系也日益紧张，他对武备系的忠诚很不牢固。§!"
+ SZC_liu_bocheng: "刘伯承"
+ SZC_liu_bocheng_high_command_desc:0 "§Y生于：§!§L1892年12月4日；大清帝国、四川省开县§!\n§Y派系：§!§S军官系§!\n§Y背景：§!§L在父亲去世后，由于家境贫寒，刘伯承从十几岁起就在农场里干活。1912年，他考入蜀军将校学堂，毕业后为熊克武效力。1913年，刘伯承在二次革命中跟随熊克武反对北京当局。然而，袁世凯最终获胜，刘伯承被迫流亡上海。在那里，他加入了孙中山领导的中华革命党，该党为国民党的前身。\n\n1915年，蔡锷举义反对袁世凯的复辟阴谋，刘伯承奉命返回四川组织护国军。在1916年的战斗中，刘伯承两度头部中弹，导致右眼失明。1924年，刘伯承率部与吴佩孚的直军作战，于龙泉驿一战取得大胜。也正是在1924年，刘伯承开始受到马克思主义和国民革命的影响。1926年，刘伯承正式加入国民党。\n\n虽然刘伯承在武汉战役期间举兵支持广州国民党政府，有力阻止了四川军阀出兵支援吴佩孚。但国民党不仅未能夺取武汉，反而彻底崩溃了。刘伯承突然与盟友失去了联系，导致其他四川军阀联手将刘伯承赶出了四川，但刘伯承至今仍藏匿于四川的边远地区。刘伯承希望有朝一日，国民党能够归来，并帮助农民摆脱反动派的压迫。§!"
+ SZC_li_jiayu: "李家钰"
+ SZC_li_jiayu_high_command_desc:0 "§Y生于：§!§L1892年4月25日；大清帝国、四川省蒲江县§!\n§Y派系：§!§S军官系§!\n§Y背景：§!§L李家钰是一名职业军人，他正好在四川陆军小学堂第四期毕业后参加了辛亥革命学生军。革命结束后，他报名参加了四四川陆军军官学堂第一期，1913年又转入南京陆军军官预备学校。同年夏，李家钰参加了多次反对袁世凯的起义，但最终失败，返回四川。\n\n进入四川陆军军官学校第三期后，李家钰在刘存厚的四川陆军第四师中任职，后又成为邓锡侯第三师的旅长。最终于1923年晋升为陆军少将，担任第一师师长。1926年，他脱离了邓锡侯的保定系，协助组建了军官系。\n\n军官系流亡期间，李家钰让革命共和主义的火种留存在了每位同僚的心中，他们决心将革命进行到底。§!"
+ SZC_he_guoguang: "贺国光"
+ SZC_he_guoguang_commander_desc:0 "§Y生于：§!§L1885年；大清帝国、湖北省蒲圻§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L1903年，贺国光进入四川陆军速成学堂学习，成为了杨森、刘湘等四川名人的同窗。辛亥革命爆发后，他回到了家乡湖北，参加了武汉保卫战。1916年，他第四次毕业后，在寇英杰手下担任了一段时间的旅长，之后凭借自己的实力脱颖而出，被提升为吴佩孚第五师的师长。尽管北伐之初屡屡受挫，但他还是在国民党的兵锋面前守住了家乡。在他的同班同学杨森被正式任命为四川督理后，贺国光请求将自己所部置于杨森的指挥之下，吴佩孚同意了这一调动。§!"
  SZC_baoding_influence:0 "保定系影响"
  SZC_baoding_influence_desc:0 "保定系掌管了政府内部一系列重要的工作，并显著的削弱了我们统治的合法性。尽管如此，他们在我们政府内部所尽的努力仍然保证四川这个火药桶不会爆炸。"
  SZC_internal_divisions:0 "内部分裂"
