--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -128,9 +128,27 @@
  MON_ilkhanate_four: "重建大汗国"
  MON_ilkhanate_four_desc:0 "和前人一样，我们也可以考虑在波斯建立一个附属国，他们可以更好地利用当地领土，减轻我们肩上繁重的行政负担。"
 
+ rising_star: "明日之星"
+ rising_star_desc: "§L这名军官在军事战术和大战略上展现出巨大的潜力。§!"
+ rising_star_tt: "§Y技能等级达到3级§!后移除"
  master_of_ordnance: "炮兵大师"
  master_of_ordnance_desc: "§L大炮从来不嫌多。§!"
+ light_infantry_officer: "轻步兵军官"
+ light_infantry_officer_desc: "§L不对称作战和敌后破坏行动的专家。§!"
  RUS_ice_march_trait: "白军传承"
  RUS_ice_march_trait_desc: "§L这位领导人乃是俄罗斯内战的老兵与英雄，曾同布党红色分子浴血奋战。如果哪一天俄罗斯大地上再次出现社会主义，那么他必将起身与之抗争。§!"
  SQI_yue_dui: "姆吉卡"
  SQI_yue_dui_desc: "§L这位领导人乃是女人中的女人，乐手中的乐手，女桐中的支配者，乐队中的统治者。§!"
+
+ CHN_anguojun_aligned: "所属：§a安国军§!"
+ CHN_beiyang_aligned: "所属：§N北洋政府§!"
+ CHN_geacps_aligned: "所属：§j共荣圈§!"
+ CHN_federalist_aligned: "所属：§f联省派§!"
+ CHN_left_kuomintang_aligned: "所属：§k国民党左派§!"
+ CHN_non_aligned: "所属：中立"
+ CHN_northern_zhili_aligned: "所属：§z北直系§!"
+ CHN_restorationist_aligned: "所属：§q保皇党§!"
+ CHN_right_kuomintang_aligned: "所属：§c国民党右派§!"
+ CHN_southern_republican_aligned: "所属：§G南方共和派§!"
+ CHN_southern_zhili_aligned: "所属：§m南直系§!"
+ CHN_Syndicalists_aligned: "所属：§R工团党§!"
