--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -146,6 +146,7 @@
  CHN_federalist_aligned: "所属：§f联省派§!"
  CHN_left_kuomintang_aligned: "所属：§k国民党左派§!"
  CHN_non_aligned: "所属：中立"
+ CHN_others_aligned: "所属：各种各样的其他主张"
  CHN_northern_zhili_aligned: "所属：§z北直系§!"
  CHN_restorationist_aligned: "所属：§q保皇党§!"
  CHN_right_kuomintang_aligned: "所属：§c国民党右派§!"
