--- a/localisation/KR_Liangguang_l_simp_chinese.yml
+++ b/localisation/KR_Liangguang_l_simp_chinese.yml
@@ -1500,6 +1500,8 @@
  POLITICS_GXC_SONG_ZIWEN_DESC:0 "宋子文是宋氏姐妹的兄弟，宋家的继承人。1915年，宋子文赴哈佛大学修读经济学，获学士学位。随后，他于国际银行公司工作，同时在哥伦比亚大学攻读博士学位。\n\n随着1924年广东的革命政府成立，他的新姐夫孙中山邀请宋子文担任财政部长。从1924年到1926年，广州经济的增长突飞猛进，这很大程度上归功于宋子文的现代经济管理方式。他还协助创立了国民党政府的中央银行，至今他在这一职位上仍保持着重要的影响力。基于此，他于1926年晋升为中央执行委员会委员。\n\n北伐战争失败后，他逃到了使馆城市。宋子文厌恶党内的左倾分子，不愿给予支持。尽管如此，他仍在上海秘密调用资金，为他二姐的闽赣根据地提供物资。如今，随着中央委员会回国，国民党在中国大陆重新建立起政权，这一次是在中国富裕的东南地区，宋子文的专业知识受到了重视，他又重新在政坛崭露头角。作为资产阶级的代表人物之一，他个人的傲慢、急躁和功利主义对此毫无帮助——他常常乐于用卑鄙的手段达到目的。" 
  POLITICS_GXC_CHEN_LIFU_DESC:0 "陈立夫与其兄陈果夫是中国国民党重要人物。兄弟俩早年入私塾，师为若臣。1911年，陈立夫迁居上海后考取了南洋路矿学校，毕业后，陈立夫因家中被袁世凯抄家，家庭经济拮据难以继续支持其学业。但其执意求学，私下报考了位于天津的国立北洋大学。1917年，陈立夫以上海第5名的成绩考入天津北洋大学学工矿后，家中同意其继续学业并为其筹集学费，就学期间，陈立夫曾为其老家湖州的富人测量田地、绘制地图，赚取学杂费，以维持学业。自北洋大学毕业后，陈立夫赴美留学。1924年，他取得美国匹兹堡大学冶矿硕士，在史克兰敦当了8个月的实习矿工后回国。在这段时间里他在美国矿工间第一次深入了解了工团主义与共产主义，尽管他对这些思想并没有太多兴趣，但是也意识到了这些思想在底层人民群众中的号召力。大革命期间，年轻的陈立夫担任着蒋中正机要秘书的总要职位，在这个岗位上，他清晰的见证着中国的革命是如何一步步走向失败的。在蒋中正选择为国玉碎的同时，心灰意冷的陈立夫也想着自杀追随蒋中正的道路，但是被他的哥哥陈果夫拦了下来。此后他与长兄一起从湖南到广州再远逃云南。如今因为长兄病危他因此执掌国民党，他将带着陈果夫、蒋中正的志向塑造全国。" 
 
+ GXC_has_RKMT_government_tooltip: "§c国民党右派政府§!"
+
  GXC_power_balance: "军党之争"
  GXC_balance_of_power_category: "军党之争"
  GXC_wen_winning_side: "文官政府"
