--- a/localisation/KR_Sichuan_l_simp_chinese.yml
+++ b/localisation/KR_Sichuan_l_simp_chinese.yml
@@ -19,6 +19,8 @@
  SZC_paternal_autocrat_party_long:0 "实业团(Shiye Tuan)\n§L由重庆军阀刘湘领导的实业团的大军，常常被直系军阀的拥护者及进步军官视作一群土匪。诚然，他庞大的军队看重数量而非质量，而且在士气上也差强人意，但是实业团通过原始但有效的人力和可观的火力成就能靠伟业。——刘湘通过控制川东南地区，保证了手下无数人的饷银的事实证明了这一点。刘湘曾一度无比忠于直系军阀，然而在刘湘被直系褫夺了四川督办的职务后，他变得一无所有了，于是他的目标转移到了夺回那些他宣称本属于自己的“东西”上——用武力与智谋。只要实业团成功将他们的影响力扩张到全川，他将推行真正的现代化和经济改革，并对从土匪和鸦片处获取的蝇头小利毫不在意。这些激进的政策意味着刘湘的军队和他的改革都依赖于开始的一口气，一个错误的计划或是一个意料之外的绊脚石都有可能打乱他实现雄心的步伐。§!"
  SZC_national_populist_party:0 "一贯道"
  SZC_national_populist_party_long:0 "一贯道(Yiguandao)\n§L一贯道邪教近年来一直同他们在四川的一小批虔诚信徒保持着联系。这类社群大多坐落于那些封闭的村庄附近，或是属于那些特别狂热的狂信徒将军的一部分麾下。因此，他们很难对天师起到直接影响，但是他们仍然能为张天然的泛民族野心起到强烈的象征作用——后者寄希望同物质水平一道升华中国人的精神水平，以终结中国的百年屈辱与军阀混战。§!"
+
+
  SZC_Liu_Cunhou_party_long: "武备系(Wubei Xi)\n§L在杨森突然而不幸的离世后，同样由于武备系政治敌手的迅速垮台，四川省出现了巨大的权力真空。领导的位置迅速被武备系内部受欢迎而富有魅力的将军、狂热的儒教徒、乌合之众煽动者刘存厚所占据。刘存厚用诸多办法把四川省最大的弱点，即凌乱的派系和去中心化的政府，转为了他个人的优势。通过贿赂、勒索、威胁和处决那些质疑他权威的将军，他成功让这个省份充满了唯唯诺诺的庸才和贪婪的机会主义者——后者会欣然管理他们的封地，并通过各种丧尽天良的办法使得“四川省”的利益最大化。尽管这个混乱的军阀联盟目前仍在运行，但是一些刘存厚的同仁已经在质疑这个体系能否在未来继续运转下去。不过，很少有人敢当面对他提出这一点，而且目前还没有将这件事干两次的人出现。§!"
  SZC_Gang_Of_Nine_party:0 "九人团"
  SZC_Gang_Of_Nine_party_long:0 "九人团(Jiu Ren Tuan)"
@@ -36,11 +38,13 @@
  SZC_Self_Government_Party_long:0 "自治政府党(Zizhi Zhengfu Dang)"
  SZC_Three_Principles_Party:0 "三民党"
  SZC_Three_Principles_Party_long:0 "三民党(Sanmin Dang)"
+
+
  SZC_yang_sen: "杨森"
- POLITICS_SZC_YANG_SEN_DESC:0 "杨森参军要追溯到1904年他报考四川陆军速成学堂。杨森在1906年四川陆军弁目队时秘密加入了中国同盟会。1908年毕业后，他进入了当时的清朝新军服役，直到1911年。杨森的背景以及同盟会的关系使得他在辛亥革命爆发后声名鹊起。后来，在蔡锷将军手下效力时，他于1921年终于擢升为了一名将军，被委派管理重庆。当1925年杨森成为了吴佩孚的盟友时，这种利用政治关联而非战功升官的模式得以延续。随着直系军阀称霸中原，大清帝国复辟，杨森被任命为了四川省督理。\n\n作为四川省督理，杨森因他不同于其他军阀的社会经济领域快速现代化的执政纲领而声名鹊起，并主导推行了一大批旨在改善四川人民生活的基建工程和教育项目。尽管他是一位成功的军事领导人，但是杨森的成功主要还是归功于他能在恰当的时间同恰当的人达成交易、获取支持——而这一现状把他和武备系置于了危险的境地之中。同时，由于他宣称的“为了四川好”的措施号召同他个人的生活方式截然相反，这种“表率作用”更是进一步削弱了他在公众中的支持率。举例来讲，由于他抨击传统观念下妇女处于不平等地位并公开禁止缠足而拉满了保守派的仇恨，然后立马因为自己娶了八个姨太太并和她们生了三十几个孩子而挥霍掉改良派人士对他释放出的所有好感。\n\n尽管缺点良多，依靠着军队和市井小民的支持，杨森仍成功掌握着权力，成为一股不容小觑的力量。只要他掌权，直系军阀总能在成都找到一位可靠的盟友。"
+ POLITICS_SZC_YANG_SEN_DESC:0 "杨森参军要追溯到1904年他报考四川陆军速成学堂。杨森在1906年四川陆军弁目队时秘密加入了中国同盟会。1908年毕业后，他进入了当时的清朝新军服役，直到1911年。杨森的背景以及同盟会的关系使得他在辛亥革命爆发后声名鹊起。后来，在蔡锷将军手下效力时，他于1921年终于擢升为了一名将军，被委派管理重庆。当1925年杨森成为了吴佩孚的盟友时，这种利用政治关联而非战功升官的模式得以延续。随着直系军阀称霸中原，大清帝国复辟，杨森被任命为了四川省督理。\n\n作为四川省督理，杨森因他不同于其他军阀的社会经济领域快速现代化的执政纲领而声名鹊起，并主导推行了一大批旨在改善四川人民生活的基建工程和教育项目。但他的问题也正是浅尝辄止，任何改革只是流于表面，同时全然不考虑实际上这些改变会带来什么。同时他是一位成功的军事领导人，但是杨森的成功主要还是归功于他能在恰当的时间同恰当的人达成交易、获取支持——而这一现状把他和武备系置于了危险的境地之中。同时，由于他宣称的“为了四川好”的措施号召同他个人的生活方式截然相反，这种“表率作用”更是进一步削弱了他在公众中的支持率。举例来讲，由于他抨击传统观念下妇女处于不平等地位并公开禁止缠足而拉满了保守派的仇恨，然后立马因为自己娶了八个姨太太并和她们生了三十几个孩子而挥霍掉改良派人士对他释放出的所有好感。\n\n无论如何杨森比起省内其他人而言有着更加漫长的公职生涯，尽管缺点良多，依靠着军队和市井小民的支持，杨森仍成功掌握着权力，成为一股不容小觑的力量。只要他掌权，直系军阀总能在成都找到一位可靠的盟友。"
  POLITICS_SZC_YANG_SEN_ARMY_DESC:0 "§Y生于：§!§L1884年2月20日；大清帝国、四川省广安§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L杨森的军事生涯能追溯到1904年他报考四川陆军速成学堂。1908年毕业后，他进入了当时的清朝新军服役，直到1911年。杨森的背景以及同盟会的关系使得他在辛亥革命爆发后声名鹊起。后来，在蔡锷将军手下效力时，1921年他被擢升为了一名将军，并被蔡锷委派管理重庆。在杨森管辖重庆期间，他同本省的其他军阀日益不和，尤其是熊克武和刘湘。虽然杨森曾尝试压制这些对手，然而他却从没有完成过他的目标。\n\n杨森当上四川督理靠的不是军功，而是主要靠他同吴佩孚以及直系军阀的关系。话虽如此，杨森也绝非滥竽充数的军事将领，他之前的作战中表现出色，并在担任四川督理期间一直保障着武备系的优势地位。§!"
  SZC_liu_xiang: "刘湘"
- POLITICS_SZC_LIU_XIANG_DESC:0 "1920年，刘湘率领川军大胜滇军后声名鹊起。他一步步晋升，最终在北伐战争期间率领一大批川军迎战国民党北伐军。在北伐战争期间，他依靠着无数次胜利为自己博得了精于战阵但同时又鲁莽短视的名声。北伐战争结束后，他带领川军荣归四川，被任命为重庆镇守使。\n\n尽管在北伐战争期间他成功建立起了自己的小集团并成为了川内一股不容小觑的力量，但是他却从未得到过梦寐以求的督理四川的权力。相反，他被任命为了杨森——直系政府和吴佩孚的忠实跟班——的下属。刘湘视这一举动为直系政府予他的侮辱，视这一切为直系政府卑鄙的任人唯亲。因此，直系军阀和他们的傀儡武备系引起了刘湘产生了深深地仇恨。\n\n这种仇恨最终导致他在1936年清政府的霸权瓦解后抓住了时机。在成功的团结起了他在实业团中的拥护者推翻了杨森后，刘湘成功亲自拿下了自己梦寐以求的成都，通过四川内战期间一系列大胆的军事冒险行动一箭双雕的击败了武备系和保定系。在宣布自己为四川省督军，将四川省会从成都迁往实业团的大本营重庆后，他对四川展开了一系列激进的现代化项目，以求有朝一日彻底和直系政府算个总账。"
+ POLITICS_SZC_LIU_XIANG_DESC:0 "1920年，刘湘率领川军大胜滇军后声名鹊起。他一步步晋升，最终在北伐战争期间率领一大批川军迎战国民党北伐军。在北伐战争期间，他依靠着无数次胜利为自己博得了精于战阵但同时又鲁莽短视的名声。北伐战争结束后，他带领川军荣归四川，被任命为重庆镇守使。\n\n尽管在北伐战争期间他成功建立起了自己的小集团并成为了川内一股不容小觑的力量，但是他却从未得到过梦寐以求的督理四川的权力。相反，他被任命为了杨森——直系政府和吴佩孚的忠实跟班——的下属。刘湘视这一举动为直系政府予他的侮辱，视这一切为直系政府卑鄙的任人唯亲。因此，直系军阀和他们的傀儡武备系引起了刘湘产生了深深地仇恨。\n\n这种仇恨最终导致他在1936年清政府的霸权瓦解后抓住了时机。在成功的团结起了他在实业团中的拥护者推翻了杨森后，刘湘成功亲自拿下了自己梦寐以求的成都，通过四川内战期间一系列大胆的军事冒险行动一箭双雕的击败了武备系和保定系。在宣布自己为四川省督军，将四川省会从成都迁往实业团的大本营重庆后，他对四川展开了一系列激进的现代化项目，以求有朝一日彻底和直系政府算个总账。\n\n§Y备注：在二十年代中期刘湘就长期苦于胃病，有时病得厉害甚至无法正常处理政务，只能靠手下办事，据他亲信所说这也许是当年驻扎重庆时和袁祖铭一起吃喝过度导致的。总之无论如何，我们最好期盼他能多活两年...§!"
  POLITICS_SZC_LIU_XIANG_ARMY_DESC:0 "§Y生于：§!§L1888年7月1日；大清帝国、四川省大邑县§!\n§Y派系：§!§P实业团§!\n§Y背景：§!§L当刘湘于1909年从四川陆军速成学堂毕业后，他在川军内部迅速升迁，到1919年更是成为四川总司令。1920年川滇战争爆发后，刘湘在击退入侵的外省军阀部队时取得了个人军旅生涯的首次大捷。当1921年川滇战争结束后，他被委任为重庆镇守使。在任期间，他将自己打造为了一股绝不容小觑的力量，并在四川省的工业中心地带建设了相当稳固的影响力。\n\n在国民党发起了北伐运动后，刘湘率领自己的部队出川阻击北伐军。在北伐战争期间，刘湘因为自己一系列坚定的防御战和不时发动的鲁莽反攻为自己赢得了骁勇善战的名声。国民党败北后，刘湘率军回到四川，臣服于时任四川督理杨森的权势之下。尽管他视这种臣服为一种侮辱，不过他仍然保有相当大一支忠诚于他的军队。很大程度上由于他镇压了北伐运动，他被人视作一位可敬的军事将领和一位权势在握的大军阀。§!"
  SZC_tang_shizun: "唐式遵"
  SZC_tang_shizun_commander_desc:0 "§Y生于：§!§L1883年；大清帝国、四川省仁寿县§!\n§Y派系：§!§P实业团§!\n§Y背景：§!§L唐式遵原本会按照父亲的安排成为一名学者，但他却毅然选择投笔从戎。1906年，唐式遵开始从军，后入读四川陆军速成学堂，与潘文华、刘湘、王瓒绪和杨森等人同班。唐式遵与潘文华是第33旅的战友，两人最终都在老友刘湘帐下效力。\n\n和潘文华一样，唐式遵也为刘湘出力不少。1916年蔡锷攻入四川时，正是他的提议，使得刘湘在与滇军的战斗中多次取胜。唐式遵历来是雄心勃勃、渴望晋升，但却不得不活在刘湘的阴影下，这让他倍感不满。\n\n尽管有着远大的抱负，但唐式遵还是选择继续忠于刘湘，并为其出谋划策。§!"
@@ -48,7 +52,7 @@
  SZC_guo_xunqi_high_command_desc:0 "§Y生于：§!§L1895年；大清帝国、四川省华阳县§!\n§Y派系：§!§S左派§!\n§Y背景：§!§L郭勋祺出生于一个农民家庭，1912年应募成为士兵，后随军西征入藏。1915年回到成都后，他投效潘文华部，并从排长升到团长。1921年，潘氏投靠刘湘并升任川军第4师师长，郭勋祺也随之成为其部下第7旅旅长。此后，郭勋祺一直与潘文华在刘湘麾下共事，与此同时他也与陈毅也建立了友谊。据说在国民党领导的北伐战争期间，郭勋祺积极参与了四川的左派起义。而当川系军阀对社会主义运动痛下毒手后，郭勋祺也为左派领袖提供了一定帮助。§!\n\n§Y备注：据传，郭勋祺强烈同情左派，甚至与刘伯承等人有直接接触。因此，他和刘湘之间常常发生摩擦，二人也互不信任。§!"
  SZC_deng_xihou: "邓锡侯"
  POLITICS_SZC_DENG_XIHOU_DESC:0 "邓锡侯的军旅生涯始于1906年，之后又报考了保定陆军军官学堂，不过当辛亥革命爆发后，他毅然辍学回川参加革命。在1923年升任将军前，邓锡侯屡屡高升。在中国这个动荡的大舞台上，他露面于政坛前后的次数远多于露面于冲锋陷阵之时，一方面他因此博得了一个值得信赖而能力出众的野心家的名声，但另一方面他也没有从台前幕后的举动中博得太多名望和财富。虽然他获得了保定系内各位校友的尊敬，但是他最终还是选择寄居于杨森之下——毕竟执掌大权的直系政府相比于保定系，更喜欢武备系。\n\n虽然没有获得直系军阀的青睐，保定系还是设法同武备系达成了合作，最终使得保定系有机会填补1936年四川内战后因杨森派系垮台带来的四川权力真空。作为保定系中保守派的代表人物，他的改革主要集中于发展乡村地区并改善四川农民的生活状况。由于他同时受到了农村地区和军队的支持，加之保定系二把手刘文辉积攒的社会支持，保定系在政治上获得了不同于中国绝大多数军阀的灵活性。邓锡侯致力于将四川建设为全中国的一个模范省，把建设四川放到所谓崇高意识形态或是扩张野心的前头。"
- POLITICS_SZC_DENG_XIHOU_ARMY_DESC:0 "§Y生于：§!§L1889年5月24日；大清帝国、四川省营山县§!\n§Y派系：§!§c保定系§!\n§Y背景：§!§L当邓锡侯1906年参军后，他随即进入了成都陆军小学堂学习。1909年毕业后，邓锡侯又考入了保定军校。辛亥革命爆发后，邓锡侯辍学回乡，投身军旅以实战代替理论指导。中华民国成立后，邓锡侯投到刘存厚的川军第四师下任职。邓锡侯初任副官，1916年升任营长，1917年升任第五旅旅长，然后在1918年2月任独立旅旅长。邓锡侯率军参与了1920年至1923年川滇黔三省一系列的冲突，并因表现良好而升任第三师师长。1923年12月，由直系军阀控制的北京政府晋升他为将军。在杨森成为四川督理后，邓锡侯向他臣服，因而继续保有自己的将军军衔。\n\n邓锡侯是一个彻头彻尾的野心家，在他成为四川的保定军校校友中最引人注目的人之前，他的军事履历里驻防、调动和升职的次数都远多于他的实战次数。尽管没人会质疑他是否可胜任自己的工作，但是与自己身经百战的同行比起来，他过去的军事经验更多算是纸上谈兵。§!"
+ POLITICS_SZC_DENG_XIHOU_ARMY_DESC:0 "§Y生于：§!§L1889年5月24日；大清帝国、四川省营山县§!\n§Y派系：§!§c保定系§!\n§Y外号：§!§c水晶猴子§!\n§Y背景：§!§L当邓锡侯1906年参军后，他随即进入了成都陆军小学堂学习。1909年毕业后，邓锡侯又考入了保定军校。辛亥革命爆发后，邓锡侯辍学回乡，投身军旅以实战代替理论指导。中华民国成立后，邓锡侯投到刘存厚的川军第四师下任职。邓锡侯初任副官，1916年升任营长，1917年升任第五旅旅长，然后在1918年2月任独立旅旅长。邓锡侯率军参与了1920年至1923年川滇黔三省一系列的冲突，并因表现良好而升任第三师师长。1923年12月，由直系军阀控制的北京政府晋升他为将军。在杨森成为四川督理后，邓锡侯向他臣服，因而继续保有自己的将军军衔。\n\n邓锡侯是一个彻头彻尾的野心家，在他成为四川的保定军校校友中最引人注目的人之前，他的军事履历里驻防、调动和升职的次数都远多于他的实战次数。尽管没人会质疑他是否可胜任自己的工作，但是与自己身经百战的同行比起来，他过去的军事经验更多算是纸上谈兵。§!"
  SZC_liu_wenhui: "刘文辉"
  POLITICS_SZC_LIU_WENHUI_DESC:0 "作为一名资深军人，刘文辉自从13岁起就开始了自己的军旅生涯。1911年他从四川陆军小学毕业后，又在1914年报考了保定军校，并在1916年毕业。虽然他的成功与影响力大多是靠裙带关系和私人轻易得来的，但至少他通过这些办法成为了圈子内部一个受人尊敬而富有影响力的人物。在北伐战争结束后，刘文辉彻底的同邓锡侯站到了一起，并成为了保定系集团中最臭名昭著的成员之一。\n\n在四川内战中击败了他的侄子刘湘后，保定系登上了权力的巅峰。他同邓锡侯的友谊为他在双头体制内部赢得了一把领导人的交椅——这同他侄子的个人专制形成了鲜明对比——而他在双头体制内部代表着更倾向改革的分支。他在军队和城市化水平较高地区的行政阶层中十分受欢迎；他帮助了保定系扩大了支持者的基本盘，让保定系的支持者远远超过了那些拥护邓锡侯的保守派。虽然他不太可能作为中国伟大的军事家登上中国的史书，但是只要这个双头体制政权继续存续下去、二人的友谊和协作能够延续，他必然会被那些渴望迅速现代化以及改善四川省诸多现状的人民们铭记。"
  POLITICS_SZC_LIU_WENHUI_ARMY_DESC:0 "§Y生于：§!§L1895年1月10日；大清帝国、四川省大邑县§!\n§Y派系：§!§m保定系§!\n§Y背景：§!§L刘文辉与军旅结缘还要多亏1911年时自己的大哥刘文渊带他前往四川陆军小学堂报名入试。某种意义上来说这个头开得很“合适”，因为接下来他的人生中取得的绝大多数成就，大多要归功于他的哥哥刘文彩及侄子刘湘带给他的裙带关系——或者是某个小团体内部勾连的成果，比如他在1914年考入保定军校后建立的人脉。虽然1916年从保定军校毕业后，他被公认为一名勤劳肯干的军人，但是他的履历也有诸多令人不满之处。最值得注意的是，在他治下，西康省西部的部分地区被西藏所占领。虽然他早期的军事履历差强人意，但是他在保定系内的人脉和他在城市地区一定的名望让他成为了一股不可小觑的势力。§!"
@@ -73,7 +77,7 @@
  SZC_pan_wenhua_high_command_desc:0 "§Y生于：§!§L1886年10月16日；大清帝国、四川省仁寿县§!\n§Y派系：§!§P实业团§!\n§Y背景：§!§L潘文华生于一户贫苦人家，他的双亲先后因病去世，潘文华因此被迫离家出走，在帽店当学徒，生活极为困苦。受到晚清新军的吸引，他经常观看士兵们的操练，甚至会参与他们的体能训练。当地的新军士兵发现了潘文华的兴趣后，便劝他吃粮当兵。\n\n潘文华在军械方面展现出了非凡天赋，他的军事成绩一路突飞猛进。为了响应辛亥革命，潘文华揭竿而起，并成功击败了后来入侵四川的滇军。潘文华与刘湘是同学，刘湘曾多次出手帮助这位贫困的将军，作为回报，两人结成了亲密友谊，并成为了彼此的知己。\n\n作为刘湘的军事顾问、战略家和朋友，潘文华对刘湘和革命思想都十分忠诚，因此在两人间产生了意识形态分歧。§!"
  SZC_tian_songyao: "田颂尧"
  SZC_tian_songyao_leader_desc:0 "§Y生于：§!§L1888年；大清帝国、四川省简阳§!\n§Y背景：§!§L$SZC_tian_songyao_bio$§!"
- SZC_tian_songyao_high_command_desc:0 "§Y生于：§!§L1888年；大清帝国、四川省简阳§!\n§Y派系：§!§P田颂尧部§!\n§Y背景：§!§L$SZC_tian_songyao_bio$§!"
+ SZC_tian_songyao_high_command_desc:0 "§Y生于：§!§L1888年；大清帝国、四川省简阳§!\n§Y派系：§!§P田颂尧部§!\n§Y外号：§!§P冬瓜§!\n§Y背景：§!§L$SZC_tian_songyao_bio$§!"
  SZC_tian_songyao_bio:0 "1912年，田颂尧加入了刘存厚的四川省陆军第四师。尽管清朝时田颂尧是同盟会成员，但在1913年的二次革命中，他却选择与袁世凯结盟。几年后他又随刘存厚讨伐袁世凯，并在其手下任团长一职。1917年，刘存厚率部夺取成都、占领重庆并成功驱逐了四川境内的云贵两省军队。\n\n同年12月，唐继尧重燃战火并将刘存厚赶出成都。北京当局将刘存厚的军队重组为第21师，田颂尧被任命为少将旅长。年底，刘存厚又任命田颂尧为第21师师长。刘存厚选择与刘湘结盟，两人合力将熊克武赶出了四川。1920年，熊克武又与刘湘结盟反对滇系，并将滇军赶出了四川。次年，熊克武再度与刘湘联手将刘存厚逐出了四川。\n\n田颂尧的第21师在四川的新权力版图中取得了一席之地。1922年，刘湘被刘成勋打败，刘成勋借机夺取了刘湘的大部分地盘。保定系的邓锡侯对战果分配感到不满，说服了同为保定军校毕业生的田颂尧一同对抗刘成勋，最终联手取胜。当刘存厚作为杨森的下属重返四川时，田颂尧又与他的老上司重新结盟，但他同时也与其他军阀保持着联系。"
  SZC_fan_shaozeng: "范绍增"
  SZC_fan_shaozeng_commander_desc:0 "§Y生于：§!§L1894年；大清帝国、四川省大竹县§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L江湖诨号“范哈儿”和“大老造”，年轻时的范绍增是一名相当离经叛道的学生。受绿林好汉等劫富济贫人物的启发，范绍增加入了革命组织“哥老会”。辛亥革命期间，范绍增参加了反清起义，并加入了同盟会。他后来又参与了护国运动，并成为了当地哥老会的领导人。\n\n1920年，范绍增参与了唐继尧推翻熊克武的行动，并卷入了四川军阀的纷争。最终，他投靠了杨森。范绍增继续发展壮大着四川哥老会的人脉和实力，与上司的关系也日益紧张，他对武备系的忠诚很不牢固。§!"
@@ -83,6 +87,7 @@
  SZC_li_jiayu_high_command_desc:0 "§Y生于：§!§L1892年4月25日；大清帝国、四川省蒲江县§!\n§Y派系：§!§S军官系§!\n§Y背景：§!§L李家钰是一名职业军人，他正好在四川陆军小学堂第四期毕业后参加了辛亥革命学生军。革命结束后，他报名参加了四四川陆军军官学堂第一期，1913年又转入南京陆军军官预备学校。同年夏，李家钰参加了多次反对袁世凯的起义，但最终失败，返回四川。\n\n进入四川陆军军官学校第三期后，李家钰在刘存厚的四川陆军第四师中任职，后又成为邓锡侯第三师的旅长。最终于1923年晋升为陆军少将，担任第一师师长。1926年，他脱离了邓锡侯的保定系，协助组建了军官系。\n\n军官系流亡期间，李家钰让革命共和主义的火种留存在了每位同僚的心中，他们决心将革命进行到底。§!"
  SZC_he_guoguang: "贺国光"
  SZC_he_guoguang_commander_desc:0 "§Y生于：§!§L1885年；大清帝国、湖北省蒲圻§!\n§Y派系：§!§g武备系§!\n§Y背景：§!§L1903年，贺国光进入四川陆军速成学堂学习，成为了杨森、刘湘等四川名人的同窗。辛亥革命爆发后，他回到了家乡湖北，参加了武汉保卫战。1916年，他第四次毕业后，在寇英杰手下担任了一段时间的旅长，之后凭借自己的实力脱颖而出，被提升为吴佩孚第五师的师长。尽管北伐之初屡屡受挫，但他还是在国民党的兵锋面前守住了家乡。在他的同班同学杨森被正式任命为四川督理后，贺国光请求将自己所部置于杨森的指挥之下，吴佩孚同意了这一调动。§!"
+
  SZC_baoding_influence:0 "保定系影响"
  SZC_baoding_influence_desc:0 "保定系掌管了政府内部一系列重要的工作，并显著的削弱了我们统治的合法性。尽管如此，他们在我们政府内部所尽的努力仍然保证四川这个火药桶不会爆炸。"
  SZC_internal_divisions:0 "内部分裂"
@@ -915,20 +920,22 @@
  nanchuan_aircraft_manufacturing_plant:0 "南川飞机制造厂"
  minsheng_shipping:0 "民生轮船"
  chongqing_tank_plant:0 "重庆坦克厂"
+
+
  sichuan.1.t:0 "1936年的四川军阀"
- sichuan.1.d:0 "随着历史的车轮驶入1936年，此时的四川在林立的军阀间维系着一种微妙的平衡。杨森是四川现在的掌权者，他以玉帅吴佩孚为幕后主使人的直系军阀作为后盾。刘存厚，作为前任四川督军和杨森的亲密战友，给后者提供了政治地位、人脉关系以及一支可观的军队，并为杨森带去了他急需的稳定和合法性。但是，过去十年间的兵祸使得杨森不得不依赖邓锡侯和刘湘为首的各路军阀，这让后者在政府内部乃至四川省全境内都保有巨大的影响力。尽管和国民党相互勾结的军官系余部仍然控制着川南的少部分地区，但是数年来他们的根据地正渐渐缩水……\n\n四川如今进退维谷：内部分裂，各个派系争夺着本省的最高领导权。看起来只要直系军阀显露出一丝衰弱的迹象，这个火药桶就会立刻爆炸……"
+ sichuan.1.d:0 "随着历史的车轮驶入1936年，此时的四川在林立的军阀间维系着一种微妙的平衡。杨森是四川现在的掌权者，他以玉帅吴佩孚为幕后主使人的直系军阀作为后盾。刘存厚，作为前任四川督军和杨森的亲密战友，给后者提供了政治地位、人脉关系以及一支可观的军队，并为杨森带去了他急需的稳定和合法性，尽管这样的合法性并没有得到川军的认可。同时杨森并没有能力彻底消灭省内的其他派系，即便他愿意如此，他背后的直系也不愿意给他足够的资源来做到这一点。杨森不得不依赖邓锡侯和刘湘、刘文辉、田颂尧为首的各路军头，这让后者在政府内部乃至四川省全境内都保有巨大的影响力。同时，收编了国民党残部的张国焘与和这帮人相互勾结的军官系余部仍然控制着川南、川西北的少部分地区，但是数年来他们的根据地正渐渐缩水...\n\n四川如今进退维谷：内部分裂，各个派系争夺着本省的最高领导权，而对于人民而言，他们唯一渴求的就是他们的仗打得太少，怎么没有全部打死在战场上。偌大个四川犹如一支塞满炸药的木桶，只求没有火星飞溅而来..."
  sichuan.1.a:0 "讲讲四川的情况吧"
  sichuan.1.b:0 "讲讲各个争权夺利的派系吧"
- sichuan.1.c:0 "吴大帅绝不会让这一切成真的"
+ sichuan.1.c:0 "怕个球，玉帅绝对不会让这种事发生"
  sichuan.2.t:0 "川系军阀"
- sichuan.2.d:0 "现代四川的历史开始于1912年。当辛亥革命的浪潮席卷四川后，这一地区进入了一段持续的动荡期，各路军阀纷纷使出十八般技艺来争夺四川省的统治权。从1912年到1926年间，辛亥革命元老、国民党人、本地军阀你方唱罢我登场，全都参与进了争夺四川省控制权的比赛中。\n\n这一地区状况最终维持到了1926年北伐战争失败。有了北伐战争的胜利者、直系军阀的领袖吴佩孚的私人支持，杨森成功成为了四川无可争议的统治者，并最终为四川省带去了一定意义上的稳定。然而，四川纷乱的派系不会就此退出历史舞台，随着杨森迅速的迷失于各个内部派系间繁杂的利益纠葛，对他来说要消除各派的影响是越来越难了。刘湘，作为其中一个军阀头子，通过和本地行政机关结盟等方式，迅速建立起了他对重庆的控制，并成为了杨森在四川境内的主要敌手。\n\n1928年时，四川遭到了邻近的云南省的入侵。虽然最初取得了一些胜利，这场入侵最终还是被川军击败了，不过这给杨森的部队造成了极大地损失。1930年西藏噶厦政府的入侵进一步恶化了四川的状况，藏军一度越过了金沙江并威胁到了省会成都。虽然北方马家军的介入最终逆转了藏军的攻势，但是四川还是失去了大半个西康，而且杨森的部队也已溃不成军。"
+ sichuan.2.d:0 "现代四川的历史开始于1911年。当辛亥革命的浪潮席卷四川后，这一地区进入了一段持续的动荡期，各路军阀纷纷使出十八般技艺来争夺四川省的统治权。从1911年到1926年间，辛亥革命元老、国民党人、本地军阀你方唱罢我登场，全都参与进了争夺四川省控制权的比赛中。\n\n这一地区状况最终维持到了1926年北伐战争失败。有了北伐战争的胜利者、直系军阀的领袖吴佩孚的私人支持，杨森成功成为了四川无可争议的统治者，第一代的军头们被新生代们赶出了权力中心，杨森短暂的为四川省带去了一定意义上的稳定。然而，自1911年起就陷入四分五裂情况的四川内部纷乱的派系们不会就此退出历史舞台，尤其是杨森带着外来者的影子...\n\n与他们的前辈不同，四川的第二代军人领袖们有着浓厚的地方主义色彩，他们常常公开承认无论南北都无法在四川取得任何合法的地位，他们将四川视为独属于四川人的宝物。刘湘，正是第二代军人领袖中最突出的例子，通过和本地行政机关结盟等方式，迅速建立起了他对重庆的控制，在四川内部他是最有实力的军头。\n\n1928年时，四川遭到了邻近的云南省的入侵。虽然最初滇系取得了一些胜利，但最终川军击败了来犯的敌人，同时这也给了各路军头们一个扩大自己地盘、军力的最好借口。1930年西藏噶厦政府的入侵进一步恶化了四川的状况，藏军一度越过了金沙江并威胁到了省会成都。虽然北方马家军的介入最终逆转了藏军的攻势，但是四川还是失去了大半个西康，而且杨森的部队也已溃不成军。"
  sichuan.2.a:0 "有点臊皮"
  sichuan.3.t:0 "川系军阀"
  sichuan.3.d:0 "虽然藏人的入侵算是被打回去了，四川的麻烦却没有就此结束。1931年，一群同国民党有勾结的军官、军阀以及前任四川督军组成的军官系，以他们在滇北的基地为起点，发动了他们针对四川的第一次“北伐”，并且他们还得到了唐继尧的共和派政府的暗中支持。杨森领导下涣散的川军根本不是国民党部队的对手，他们一次又一次大败而归，还丢掉了绝大部分的补给。随着川系军阀濒临崩溃，杨森在走投无路的情况下被迫同重庆军阀刘湘以及他的“实业团”组成了临时联盟。有了刘湘的帮助，杨森终于把国民党军打了回去。与实业团的进一步合作使得四川能够重建军队，而代价是工业团在政府内部的影响力越来越高。\n\n另一个影响力与日俱增的团体是以邓锡侯为首的保定系，他们也在帮助杨森镇压军官系并重建杨森的军队时出了力。保定系在镇压叛军过程中的所作所为让该派系受到了越来越多的支持，越来越多的市民认为四川军阀中只有他们算是心存百姓的。\n\n滇系军阀在1933年又策划了一次入侵以支援军官系，不过由于八省的联帅孙传芳干涉，这一次行动很快就流产了。滇军意料之外的撤退让杨森夺回了川南的局部地区。在这片混乱中，田颂尧也在川东北占山为王，做起了一个割据小军阀，但他的野心有多大仍然是个迷。"
  sichuan.3.a:0 "讲讲各个争权夺利的派系吧"
  sichuan.3.b:0 "无论如何，无川不成军！"
  sichuan.4.t:0 "分裂的四川"
- sichuan.4.d:0 "1936年的四川处在分裂之中，有若干个派系渴望能争取到四川的大权。\n\n现在的掌权派系是武备系，由杨森和他的好友刘存厚所领导。鉴于数年来吴佩孚以私人名义向武备系提供了支持，武备系同北京和南京的直系当局合作紧密。尽管武备系的影响力仍然掌控着局势，但是十年来该派系的壮大很大程度上依赖于直系的支持。一旦直系有个风吹草动，杨森的权势一定也会陷入危险之中。\n\n杨森在四川的首席敌人是重庆军阀刘湘，实业团的头目。自从1931年国民党残部的“北伐”以来，刘湘一直是杨森的盟友，但是刘湘是一个有野心的家伙，他毫不掩饰自己想掌控四川的野心。一旦机会显现，实业团肯定会重新考虑考虑要不要继续同杨森联盟。\n\n第三大派系是保定系，一个由保定武备学堂的校友——尽管这不是入伙的先决条件——组成的小集团，由杨森“麾下的”将军邓锡侯领导。在前几年里，他们对南部叛军根据地的高调行动显著的获得了名望。因此杨森的势力在川南地区的核心就是由保定系所组成的。尽管邓锡侯一直以来都忠于杨森，但人们同样认为他对杨森构成了威胁。\n\n在川南，国民党残部1931年扩张行动的残余势力仍然占据着一些领土。军官系（人们这么称呼他们），是四川最主要的公开反对杨森的势力。该派系由吕超和熊克武所领导，该派系同云南的滇系军阀保持着紧密联系，离开了滇系军阀，他们也很难生存下去。"
+ sichuan.4.d:0 "1936年的四川处在分裂之中，有若干个派系渴望能争取到四川的大权。\n\n现在的掌权派系是武备系，由杨森和他的好友刘存厚所领导。鉴于数年来吴佩孚以私人名义向武备系提供了支持，武备系同北京和南京的直系当局合作紧密。尽管武备系的影响力仍然掌控着局势，但是十年来该派系的壮大很大程度上依赖于直系的支持。一旦直系有个风吹草动，杨森的权势一定也会陷入危险之中。\n\n杨森在四川的首席敌人是重庆军阀刘湘，在川东流行的货币都是由他所发行，倘若他垮台，川东的商人们将面临灭顶之灾。自从1931年国民党残部的“北伐”以来，刘湘一直是杨森的盟友，但是刘湘是一个有野心的家伙，同时为达目的不择手段，除非时机已到否则他绝对不会轻举妄动。然而一旦机会显现，实业团肯定会重新考虑考虑要不要继续同杨森联盟。同时无论外人怎么评价他们这些割据一方的军人们，但刘湘自己从来不承认自己是所谓的军阀。\n\n第三大派系是保定系，一个由保定武备学堂的校友——尽管这不是入伙的先决条件——组成的小集团，由杨森“麾下的”将军邓锡侯领导。在前几年里，他们对南部叛军根据地的高调行动显著的获得了名望。因此杨森的势力在川南地区的核心就是由保定系所组成的。尽管邓锡侯一直以来都忠于杨森，但人们同样认为他对杨森构成了威胁。\n\n在川南和川北，国民党残部1931年扩张行动的残余势力仍然占据着一些领土，工团党的根据地也未被荡平。军官系（人们这么称呼他们），是四川最主要的公开反对杨森的势力。该派系由吕超和熊克武所领导，该派系同云南的滇系军阀保持着紧密联系，离开了滇系军阀，他们也很难生存下去。\n\n大多数川军并不信仰任何主义，事实上他们也压根不懂什么主义不主义。"
  sichuan.4.a:0 "讲讲四川的情况吧"
  sichuan.4.b:0 "直隶的老表们绝对不会见死不救的"
  sichuan.5.t:0 "南方的骚乱"
@@ -983,6 +990,7 @@
  SZC_join_faction_rejected_title_KMT:0 "国民党分裂"
  SZC_join_faction_rejected_desc_KMT:0 "国民党是一个广泛的联盟。根据对孙中山先生三民主义的不同解读，每个人能做出不同的解释。这导致了过去的党内冲突，并很不幸的引发了今日的党内冲突。由于认为我们走上了歧路，[FROM.GetLeader]已经回绝了我们的提议，并宣布我们已经不再是三民主义的追随者。\n\n如果他们喜欢单干，那就让他们去吧。"
  SZC_join_faction_rejected_KMT:0 "这对人民有什么好处？"
+
  sichuan.12.t:0 "向[FROM.GetCliqueShortName]求和？"
  sichuan.12.d.SZC:0 "我们旨在收复昌都的战役已经成为了我们军队耻辱性的灾难。我们的军队指挥官曾保证我们有能力迅速占领整个地区，进军途中只会受到少量藏在各佛寺中，装备简陋而训练匮乏如乌合之众般的武僧的象征性抵抗。然而，我们的敌人不仅坚守住了阵地，还把我们的军队赶出了西康。\n\n显然，我们没有能力在内战后再发起一场军事入侵行动，随着成都眼下有了被攻击的直接威胁，我们总参谋部的一些军官正敦促我们及时止损，向西藏提议和平。虽然这么做会严重损害我们政府的面子，但是能够让我们以相对较少的损失来结束冲突，并让我们有条件重建军队。一小部分强硬派敦促我们继续攻击这些狂信徒，但是考虑到战事现状，采纳他们的意见或许并不受欢迎。"
  sichuan.12.d.TIB:0 "尽管勇敢的夺多僧兵为了捍卫藏人的土地不懈奋战，四川入侵者仍然攻占了一个又一个城镇，洗劫了一个又一个寺庙，给我们的同胞带去了巨大的损失。尽管这并没有动摇大黑天的意志，但是我军中许多人已谏言：继续作战指挥导致更多的流血与劫难。随着许多圣地被敌人的兵锋所威胁到，有许多声音要求我们求和，割让我们的敌军宣称的土地以结束这场战争。一些强硬派仍然希望继续战斗，但是他们的声音已经被更多软弱的——很不幸，也是现实的声音所压倒。"
@@ -997,6 +1005,7 @@
  sichuan.14.d.SZC:0 "毫不意外的，派去[TIB.Capital.GetName]同藏人谈判的使节被驱逐出城，我们提出的和平请求也被拒绝了。他们甚至拒绝谈判这个概念，执意要把战争打到血流成河的境地。由于藏军牢牢盘踞在西康，我们得进行一场艰苦卓绝的战斗把他们最终赶出四川。"
  sichuan.14.d.TIB:0 "我们前往[SZC.Capital.GetName]的使节带着不幸的消息归来了。我们求和的提议被四川的领导层回绝了——很明显他们不满足于只是夺取我们的东部领土，而是想要攻占西藏全境。由于四川已经回绝了和议，我们别无选择，只能在战场上同他们决一胜负。许多僧侣已经响应号召，对侵略者背水一战。菩萨保佑我们取得胜利。"
  sichuan.14.a:0 "战至最后！"
+
  sichuan.15.t:0 "武备系寻求庇护"
  sichuan.15.d:0 "四川的内战结束了，我们的武备系盟友被[SZC.GetRulingParty]击败了。为了逃避[SZC.GetLeader]可能的报复，这批四川省的前任统治集团已抵达我处，寻求为我们的武装部队效力——并寄希望于，也许，有朝一日能重回四川。"
  sichuan.15.a:0 "这里永远欢迎我们的老朋友！"
@@ -1018,6 +1027,7 @@
  sichuan.19.d:0 "看起来[SZC.GetLeader]的野心又产生了另一个受害者。在四川的二刘之战爆发后，四川省再一次陷入了战乱之中——这是阻止刘湘个人野心的最后一步。但是，这个机会并没有化为现实。虽然进行了坚决的抵抗，这位前西康军阀、刘湘的反对派领袖、刘湘的叔叔，刘文辉，在眉山之战中被决定性的打败了；不久后，西康被刘湘的部队所席卷，他不得不为逃避侄儿的怒火而逃离四川。现在他抵达了[Root.GetCliqueShortName]，寻求加入我们的武装部队。一些人认为他这么做只是为了复仇，抛开这些流言来讲，他毕竟是一个有经验的将军，或许能在实战中证明他的价值。"
  sichuan.19.a:0 "欢迎来到[Root.GetCliqueShortName]"
  sichuan.19.b:0 "我们不需要大烟将军"
+
  sichuan.20.t:0 "[From.GetNameDefCap]动员部队反抗我们！"
  sichuan.20.d:0 "大新闻！我们的特务发现[From.GetNameDef]正动员部队前往我们之间的边界。战争近在咫尺！"
  sichuan.20.a:0 "准备防御！"
