--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -583,7 +583,7 @@
  guides.1000.a:0 "去中华人民共和国页面（统一后路线）"
  guides.1000.b:0 "帅到"
  guides.1001.t:0 "中华人民共和国路线（统一后路线）指南"
- guides.1001.d:0 "问：彭德怀？\n\n答：统一前的工团路线中让彭德怀上台，然后在政协事件中维持军管。\n\n问：邓小平、高岗、刘少奇、周恩来、陈云、习仲勋、胡耀邦？\n\n答：在政协会议选举事件链里面选就完事了，让任意一派支持度达到最高。如果谁都没有达成胜出林伯渠就会上任（没有专属国策）。其中邓小平-极权派-极权主义，刘少奇、高岗-正统派-工团主义，陈云、周恩来-技官派-激进社会主义，习仲勋、胡耀邦-市场派-社会自由主义。\n\n问：特科政变？\n\n答：有两种方式。\n 第一种是让邓小平上台开启整风然后一直扩大化，最后康生就会政变，但是这种方式只能让康生上台。\n 第二种则是让邓小平、高岗、周恩来其一上台，完成改组中社部后杀掉汪精卫、胡汉民、同意戴笠加入、杀掉周佛海、不给特科涨工资。最后特科就会政变，你可以选择想要的那位上台。\n 不用担心记不住，政变链的选项内会有提示的。\n\n问：钱学森/郭沫若/陈毅？\n\n答：让周恩来上台，组建中科院，然后选你想要上台的那位当院长，在完成周恩来的最后一个国策的一段时间后，就会出放权事件，选择废除对应的院长就会上台。不废除，周恩来就会换成技官社会主义继续执政（没有专属国策）\n\n问：林彪、贺龙、叶剑英的三头同盟？\n\n答：用第二种方式让中社部上台，在大清洗决议中不断杀人，且中途事件也不要停手，军队就会政变。在之后的三头同盟决议中让你想玩的那个威望超过80%。\n\n问：毛泽东？\n\n答：在除三头同盟与周恩来的继任者外任何PROC路线中让土地改革严重失败"
+ guides.1001.d:0 "问：彭德怀？\n\n答：统一前的工团路线中让彭德怀上台，然后在政协事件中维持军管。\n\n问：邓小平、高岗、刘少奇、周恩来、陈云、习仲勋、胡耀邦？\n\n答：在政协会议选举事件链里面选就完事了，让任意一派支持度达到最高。如果谁都没有达成胜出林伯渠就会上任（没有专属国策）。其中邓小平-极权派-极权主义，刘少奇、高岗-正统派-工团主义，陈云、周恩来-技官派-激进社会主义，习仲勋、胡耀邦-市场派-社会自由主义。\n\n问：特科政变？\n\n答：有两种方式。\n 第一种是让邓小平上台开启整风然后一直扩大化，最后康生就会政变，但是这种方式只能让康生上台。\n 第二种则是让邓小平、高岗、周恩来其一上台，完成改组中社部后杀掉汪精卫、胡汉民、同意戴笠加入、杀掉周佛海、不给特科涨工资。最后特科就会政变，你可以选择想要的那位上台。\n 不用担心记不住，政变链的选项内会有提示的。\n\n问：钱学森/郭沫若/陈毅？\n\n答：让周恩来上台，组建中科院，然后选你想要上台的那位当院长，在完成周恩来的最后一个国策的一段时间后，就会出放权事件，选择废除对应的院长就会上台。不废除，周恩来就会换成技官社会主义继续执政（没有专属国策）\n\n问：林彪、贺龙、叶剑英的三头同盟？\n\n答：用第二种方式让中社部上台，在大清洗决议中不断杀人，且中途事件也不要停手，军队就会政变。在之后的三头同盟决议中让你想玩的那个威望超过80%。\n\n问：毛泽东？\n\n答：在除三头同盟任何PROC路线中让土地改革§R严重失败§!"
  guides.1001.a:0 "返回"
  guides.1001.b:0 "帅到"
  guides.1002.t:0 "中华民国"
