--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1164,13 +1164,15 @@
  HNN_Yuan_Wen_Cai: "袁文才"
  POLITICS_HNN_YUAN_WEN_CAI_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1898年10月，大清帝国 江西省 宁冈县§!\n§Y军旅生涯：§!§g袁文才原是江西宁冈土匪组织“马刀会”的领导人之一，1926年受国民政府招安改编成为宁冈县保卫团，袁文才担任团总。9月受宁冈工团党组织人龙超清的游说发动暴动策应国民革命军北伐，同年11月加入工团党。大革命失败后，袁文才率领所部继续回到宁冈做土匪武装，直到接到董必武送来的信件后，前往董必武挥下。1928年2月，袁文才部改编为工农革命军第1军第1师第2团，袁文才任团长。"
  HNN_Long_Chao_Qing: "龙超清"
- POLITICS_HNN_LONG_CHAO_QING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年，大清帝国 江西省 宁冈县§!\n§Y军旅生涯：§!§g龙超清"
+ POLITICS_HNN_LONG_CHAO_QING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年，大清帝国 江西省 宁冈县§!\n§Y军旅生涯：§!§g龙超清，又名龙济明、龙济民。龙超清出生于仕宦家庭，其父龙钦海为留日学者，曾任江西省参议会议长、教育厅厅长等职，思想开明，支持进步活动。受家庭熏陶，龙超清自幼接受良好教育，1921年考入南昌省立第二中学，期间接触《中国青年》《向导》等进步刊物，参与反帝反军阀斗争。1925年秋，经萧国华介绍加入中国工团党，投身革命。1926年，龙超清受党组织派遣，以国民党特派员身份返回宁冈，秘密筹建革命力量。他联合当地绿林武装首领袁文才的“马刀队”，将其改编为“宁冈县保卫团”，并策划发动“宁冈起义”，推翻当地政府，成立以自己为主席的“宁冈县人民委员会”。同年北伐战争溃败后，董必武等人流亡湖南组织新的革命，龙超清作为地方党组织代表，主动联络将袁文才部归纳重新入党。但在革命工作中龙超清却和袁文才产生间隙，直到党组织介入调和，尽管二人握手言和，但是始终无法回到从前。"
  HNN_Wan_Xi_Xian: "宛希先"
  POLITICS_HNN_LONG_CHAO_QING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1906年，大清帝国 湖北省 黄梅县§!\n§Y军旅生涯：§!§g宛希先"
  HNN_Hua_Guofeng: "华国锋"
  POLITICS_HNN_Hua_Guofeng_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1921年2月16日，中华民国 山西省 交城县§!\n§Y军旅生涯：§!§g华国锋"
  HNN_Xu_Si_You: "许世友"
- HNN_geng_biao: "耿飚"
+ HNN_geng_biao: "耿飚" 
+ HNN_Lin_Bo_Qu: "林伯渠" 
+ POLITICS_HNN_LIN_Bo_Qu_DESC:0 " "
  HNN_wang_gan_chang: "王淦昌"
  HNN_zhao_jiu_zhang: "赵九章"
  HNN_guo_yong_huai: "郭永怀"
