--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -97,8 +97,12 @@
  HNN_national_populist_party:0 "一贯道"
  HNN_national_populist_party_long:0 "一贯道(Yiguandao)\n§g一贯道本身并非一个有组织的政党，实际上这是一个由四散的宣讲者、虔信的民众以及地下集会等等秘密结社形式的集合。在湖南他们的合作者是一群信仰三期普渡的人，这群人的头领是石顶武和他的父亲，尽管在名义上他们是一贯道的一环，但事实上在他们的传教过程中几乎很少提到张天师的名字。§!"
 
+ HNN_Tan_Yan_Kai: "谭延闿"
  POLITICS_HNN_Tan_Yan_Kai_DESC:0 "谭延闿起初拥护清王朝改良、立宪，但满清崩溃后其政治立场越发革命化。民国初年，谭延闿出任湖南都督，但后来袁世凯将其罢免，由汤芗铭取而代之，后者借袁世凯的旗号残酷镇压革命党。\n\n然而1916年，汤屠户被逐出长沙，刘人熙接任湖南督军。然而他无力掌控局面，谭延闿复任省长兼督军。段氏皖系在北京掌权后，他再次被迫下野。而新任督军张敬尧过于腐败无能，故又被逐出湖南，谭延闿再次回湘。1920年，谭延闿三次出任湖南督军，主张联省自治，和平统一中国。\n\n同年，他再被程潜、赵恒惕逼迫下野，于是离湘赴粤投靠孙中山。1922年，谭延闿成为国民党正式党员，次年他试图为国民党重夺湖南，但被赵恒惕所部击退。北伐期间，他任第二军军长，但德军介入、广州沦陷后，第二军在湖南被包围。汤芗铭战后赦免了谭延闿及其部下，谭勉强接受特赦，从此隐姓埋名，直到省议会重建。不过，谭延闿报国之心尚存，如果条件允许他不介意重新加入国民党。"
+ POLITICS_HNN_Tan_Yan_Kai_kmt_DESC:0 "谭延闿起初拥护清王朝改良、立宪，但满清崩溃后其政治立场越发革命化。民国初年，谭延闿出任湖南都督，但后来袁世凯将其罢免，由汤芗铭取而代之，后者借袁世凯的旗号残酷镇压革命党。\n\n然而1916年，汤屠户被逐出长沙，刘人熙接任湖南督军。然而他无力掌控局面，谭延闿复任省长兼督军。段氏皖系在北京掌权后，他再次被迫下野。而新任督军张敬尧过于腐败无能，故又被逐出湖南，谭延闿再次回湘。1920年，谭延闿三次出任湖南督军，主张联省自治，和平统一中国。\n\n同年，他再被程潜、赵恒惕逼迫下野，于是离湘赴粤投靠孙中山。1922年，谭延闿成为国民党正式党员，次年他试图为国民党重夺湖南，但被赵恒惕所部击退。北伐期间，他任第二军军长，但德军介入、广州沦陷后，第二军在湖南被包围。汤芗铭战后赦免了谭延闿及其部下，谭勉强接受特赦，从此隐姓埋名，直到省议会重建。不过，谭延闿报国之心尚存，如今国府重建，革命再启，他将同程潜、唐生智两位将军一同再造民国！"
+ HNN_zhao_hengti: "赵恒惕"
  POLITICS_HNN_ZHAO_HENGTI_DESC:0 "湖南督理赵恒惕治理湖南已有十余年之久了。1880年他出生于湖南衡州府，1906年考入日本陆军士官学校，主修炮兵专业。进入学校前一年，赵恒惕还加入了同盟会。辛亥革命中，被湖北都督黎元洪任为左翼军司令。1913年追随谭延闿参加二次革命，率师攻鄂，旋被袁世凯派遣入湘的汤芗铭俘获，押解入京判刑10年。1915年经黎元洪、蔡锷等具保，获释出狱。次年，回湖南，任湘军第一师师长，嗣后代督军。\n赵恒惕主持了亚洲第一个省宪运动，制定湖南省宪法、推动民选省议会和民选省长，赵恒惕作为省长，自己主持制定省宪限制省长权力，这难能可贵。\n1926年，因反对广东国民政府北伐军入湘作战，被唐生智逼迫下台。赵恒惕向好友吴佩孚求援，助其返湘。虽成功复位，但赵恒惕心中却有不满，他希望自己的督理之位为民选得出，而非中央政府委派。\n赵恒惕隶属于八省联合，虽然他位于本省权力之巅，不必直接听命于南京方面的孙传芳，但为了避免与德国交恶，他选择了与其为伍。\n如今在八省联合瓦解后，赵恒惕终于再次确立了自己的独立地位，并使湖南重新恢复自治。"
+ POLITICS_HNN_ZHAO_HENGTI_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1880年1月12日\n大清帝国 湖南 衡山\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§g衡阳市长赵恒惕治理湘东南已有十余年之久了。1880年他出生于湖南衡州府，1906年考入日本陆军士官学校，主修炮兵专业。进入学校前一年，赵恒惕还加入了同盟会。辛亥革命中，被湖北都督黎元洪任为左翼军司令。1913年追随谭延闿参加二次革命，率师攻鄂，旋被袁世凯派遣入湘的汤芗铭俘获，押解入京判刑10年。1915年经黎元洪、蔡锷等具保，获释出狱。次年，回湖南，任湘军第一师师长，嗣后代督军。\n赵恒惕主持了亚洲第一个省宪运动，制定湖南省宪法、推动民选省议会和民选省长，赵恒惕作为省长，自己主持制定省宪限制省长权力，这是难能可贵的。\n1926年，因反对广东国民政府北伐军入湘作战，被唐生智逼迫下台。赵恒惕向好友吴佩孚求援，助其返湘。但是却被汤芗铭抢先一步，尽管二人随后达成了一定的妥协，但是双方也都不满意，当南京的涟漪波及湖南时，赵恒惕也有着自己的行动。§!"
  POLITICS_HNN_TANG_SHENGZHI_DESC:0 "唐生智原属于赵恒惕湘系军阀，其在生涯早期与谭延闿有过交锋。当时唐生智协同贺耀祖、叶开鑫把谭延闿从衡山赶回了广州。在接下来几年里，唐生智与叶开鑫不和，双方摩擦日渐增加，而前者认为后者更受赵的青睐。1926年3月，唐生智发动兵变反对赵恒惕，但是兵败而被迫逃往广州。\n\n唐生智受到了广州方面的欢迎，其部被改组为国民革命军第八军。唐生智和他统帅的第八军很快得以在北伐战争中证明自己的能力。他率部大举进攻湖南，赶走了赵恒惕，还接连战胜吴佩孚部。可惜北伐随后遭到了德意志帝国的干涉，总司令蒋介石惨死，中央委员会流亡巴黎，背靠德国的吴佩孚赢下了战争。\n\n唐生智率领第八军逃窜到了江西和福建的山区，并与孙传芳的八省联合斗争了数年。上海起义后，邓演达和宋庆龄率领临时行动委员会附属部队南下加入了唐生智，并建立了闽赣根据地以继续反抗。"
  POLITICS_HNN_CHENG_QIAN_DESC:0 "程潜生于一个富裕的耕读世家，从小接受着传统的儒家教育。十六岁便过童试中秀才、准备踏入学仕之路。然而在了解到19世纪中外时局后，程潜决定放弃科举之途、弃文习武，转至湖南武备学堂进修。成绩优异的他，被保送至日本留学。在那里，程潜结识了黄兴、宋教仁、李烈钧等革命家；又在1905年与孙中山面谈后当即加入同盟会。日后，他与唐继尧一同于日本陆军士官学校炮科毕业。\n\n辛亥革命爆发，程潜参加长沙会战。加入国民党后，他又在护国运动和护法运动中大展身手，证明了对孙中山理想的忠诚。1917年程潜率领湘南护法军驱逐了汤芗铭，随后被民主选举为湖南省长。\n\n由于其在与陈炯明冲突中支持孙中山，因而颇受器重、并于北伐战争前夕自办军校培养军事人材。孙中山建立黄埔军校时，曾一度考虑以程潜为校长。赢得东征战役胜利后，其被选为国民党中央执行委员会委员。同年其所辖湖南部队改组为国民革命军第六军。\n\n北伐战争开始后，他曾亲率第六军赴南昌作战。其部勇猛无比，攻无不克。可叹北伐事业失利，深陷湖南西部的第六军只得跟随国民党残部流窜到贵州。万幸的是程潜的第六军保全了实力，得以凭此与唐继尧谈判，争取其对国民党残部的庇护。\n\n如此一支雄师，在程潜的率领下在贵州韬光养晦，静静地等待崛起的时机。届时，第六军将再次尝试夺取湖南。这位老革命不仅在国民党内广受尊重，也在湖南省内威名显赫，其革命夙愿实现之日也许不远了。"
  HNN_tang_xiangming: "汤芗铭"
@@ -160,8 +164,6 @@
  HNN_tao_zhiyue:0 "陶峙岳"
  HNN_Xia_Dou_Ying:0 "夏斗寅"
  HNN_Fang_Ding_Ying:0 "方鼎英"
- HNN_zhao_hengti:0 "赵恒惕"
- POLITICS_HNN_ZHAO_HENGTI_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1880年1月12日\n大清帝国 湖南 衡山\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§g衡阳市长赵恒惕治理湘东南已有十余年之久了。1880年他出生于湖南衡州府，1906年考入日本陆军士官学校，主修炮兵专业。进入学校前一年，赵恒惕还加入了同盟会。辛亥革命中，被湖北都督黎元洪任为左翼军司令。1913年追随谭延闿参加二次革命，率师攻鄂，旋被袁世凯派遣入湘的汤芗铭俘获，押解入京判刑10年。1915年经黎元洪、蔡锷等具保，获释出狱。次年，回湖南，任湘军第一师师长，嗣后代督军。\n赵恒惕主持了亚洲第一个省宪运动，制定湖南省宪法、推动民选省议会和民选省长，赵恒惕作为省长，自己主持制定省宪限制省长权力，这是难能可贵的。\n1926年，因反对广东国民政府北伐军入湘作战，被唐生智逼迫下台。赵恒惕向好友吴佩孚求援，助其返湘。但是却被汤芗铭抢先一步，尽管二人随后达成了一定的妥协，但是双方也都不满意，当南京的涟漪波及湖南时，赵恒惕也有着自己的行动。§!"
  POLITICS_HNN_HE_YAOZU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1889年5月8日，大清帝国 湖南省 宁乡县§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g贺耀祖生于一户富裕人家，曾在贺氏家族学校接受私塾教育，后来又入学玉潭书院。他先是就读于湖南陆军小学第一期，后来又进入武昌陆军第三中学，毕业后因表现优异被送往日本陆军士官学校学习。在那里，贺耀祖加入了同盟会，并参加了辛亥革命。在黄兴的建议下，他回到日本继续深造，并于1916年回国参与了孙中山领导的一系列革命运动。\n\n次年，贺耀祖加入了赵恒惕领导的湘军，并在六年内稳步晋升，从团长一路晋升到师长。然而贺耀祖却在北伐战争期间加入国民党，尽管及时的脱身使其最终免遭北伐失败所带来的巨大政治影响。贺耀祖虽才华横溢，但过往的叛变经历使其难以晋升地方高层——不过他仍是湖南省参谋部的重要成员。§!"
  POLITICS_HNN_SONG_XILIAN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1907年4月9日，大清帝国 湖南省 湘乡县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g宋希濂生于一户富裕农民家庭，在这个女孩为主的家里，他是家中长子，由父、叔专门教授古文诗词。宋希濂先后就读于多所私塾，并于1921年入读长沙长郡中学，在那里他首次接触到革命活动。宋希濂积极投身于学生运动，并与同学们共同创办了《雷声》墙报，批评帝国主义、小军阀，甚至由于赵恒惕处决了工人运动领袖黄爱、庞人铨，而开始批判当局。\n\n从程潜创办的大本营陆军讲武学校毕业后，宋希濂说服陈赓等人与他一同前往新开办的黄埔军校。作为黄埔军校一期学员中最年轻的毕业生，他于1924年6月加入国民党，并参与了讨伐陈炯明的东征战役。宋希濂部在北伐战争中表现出色，甚至与直系军阀孟昭月部展开过肉搏战。\n\n然而，随着北伐军全线崩溃，宋希濂领溃兵撤入贵州，在那里与往日恩师程潜重逢。§!\n\n§Y重要信息：人事关系上宋希濂不属于第六军，但他与第六军的关系由来已久，因此实际上他被看作第六军的一员。此外，他与左派人士陈赓私交甚密。§!"
  HNN_chen_quzhen_bio:0 "§g陈渠珍1903年考入湖南武备学堂第一期附设的兵目班，1904年因成绩优异升入将弁班，1906年毕业分配在长沙新军第四十九标任队官，并加入中国同盟会。1907年经湖北巡抚张学簪介绍，持赵尔巽的介绍信，偕同乡、旧学友林修梅等五人投奔川边大臣赵尔丰，任新军六十五标队官。宣统元年（1909年）英军入侵西藏，七月，钟颖率部进军西藏，陈渠珍被任命为援藏军一标三营（管带林修梅）督队官，参加了工布江达、波密等地战役。川边大臣赵尔丰抵昌都，撤销林的管带职务，委陈渠珍代之，进军驻守工布江达。1911年10月，武昌起义爆发的消息传到西藏后，进藏川军中的哥老会组织积极响应，其部属还杀死了协统罗长裿。第一次驱汉事件后，陈渠珍深知形势危殆，策动手下湘黔滇籍官兵115名，取道羌塘草原，翻越唐古拉山入青海返回内地，辗转七个多月，直至民国元年6月到达西宁，全队仅七人生还。回到湘西，负责督办开河工程，湘西镇守使田应诏保奏其开河有功，北洋政府查办在西藏时协统罗长琦被杀案，被诬告陈是主谋，逮解送京。陈渠珍力辩得直，又得傅良佐担保，方得脱案。1913年任湘西镇守使署中校参谋、副参谋长。主办军官训练团。1917年护法战争时期，湘西镇守使田应诏组织护法军第一路军，陈任参谋长兼第一梯团长，旋又代理第一路军司令。1920年湘西镇守使田应诏中将因拥护程潜被谭延闿架空调往长沙；谭延闿任命陈渠珍为湘西巡防军统领、辰沅剿匪总指挥。自此掌握了湘西军政大权。1925年，四川军阀熊克武部侵入湘西。省长赵恒惕任命陈为澧州镇守史、湘西屯边使。自此陈渠珍彻底稳定了对湘西的控制权，而在大革命期间，其同样两面受用，北伐军时期，陈渠珍加入革命军。汤芗铭时期，陈渠珍又宣布效忠汤芗铭，但无论如何，始终没有人能撼动陈渠珍对湘西的控制。时至今日无人不称其为“湘西王”。§!"
@@ -1145,7 +1147,8 @@
  HNN_Qian_Xuesen: "钱学森"
  HNN_Qian_Xue_DESC:0 "钱学森，1911年12月11日生于上海，出身于吴越钱氏家族。、，是五代吴越国国王钱镠的第33代孙。1933年毕业于国立交通大学，随后赴美留学，在获得美国麻省理工学院航空工程理学硕士学位后至加州理工学院求见空气动力学权威西奥多·冯·卡门教授，征求进修意见。冯·卡门建议钱学森入加州理工学院研究院进修。同年秋，入加州理工学院研究院，师从冯·卡门。在美国求学的同时，钱学生也心系祖国。在祖国统一，向他抛来橄榄枝的第一时间他便启程归乡。"
  Guo_Mo_DESC:0 "郭沫若是四川省乐山县人，少年曾就读于成都石室中学。父亲郭朝沛经营商业。母亲杜福荪，是一个没落的官宦人家的女儿。1914年，郭沫若留学日本，先于旧制第一高等学校习日语，升读第六高等学校，1918年入九州帝国大学医学部，1923年毕业。1921年1月，还在上学的郭沫若以病假名义休学3个月，以便前往京都帝国大学旁听文科。1921年发表第一本新诗集《女神》。同年又与郁达夫等人一同创立文学学社“创造社”，是新文化运动的重要旗手。"
- POLITICS_HNN_HU_YAOBANG_DESC:0 "胡耀邦生于湖南省浏阳县西岭镇中和乡苍坊村，家中因行九而乳名九伢子。1926年，胡耀邦在读完初小后，到文家市的里仁学堂读高小，学堂校长陈世乔、教师甘思藻、吴千晋等都是工团党员，胡耀邦因此开始吸收工团主义。1927年，大革命失败，里仁学堂被查封，陈世乔、吴千晋等人被北洋军阀逮捕并杀害。1929年，胡耀邦转到浏阳县立初级中学读书，并经本县杨桂英介绍，秘密加入青年团。胡耀邦回乡后，因为能够读书识字，被推举为乡团支部书记，团结乡村支援红军与三省边界革命根据地。1931年，当地乡团暴露，引发军阀赵恒惕的围剿，胡耀邦等人在革命武装的掩护下突围前往中央驻地，而胡耀邦因此留在青年部担任干事。1933年8月，升任青年部部长、兼任宣传部部长。9月正式加入中国工团党。"
+ HNN_Hu_Yao_Bang: "胡耀邦"
+ POLITICS_HNN_HU_YAOBANG_DESC:0 "胡耀邦生于湖南省浏阳县西岭镇中和乡苍坊村，家中因行九而乳名九伢子。1926年，胡耀邦在读完初小后，到文家市的里仁学堂读高小，学堂校长陈世乔、教师甘思藻、吴千晋等都是工团党员，胡耀邦因此开始吸收工团主义。1927年，大革命失败，里仁学堂被查封，陈世乔、吴千晋等人被北洋军阀逮捕并杀害。1929年，胡耀邦转到浏阳县立初级中学读书，并经本县杨桂英介绍，秘密加入青年团。胡耀邦回乡后，因为能够读书识字，被推举为乡团支部书记，团结乡村支援红军与三省边界革命根据地。1931年，当地乡团暴露，引发军阀赵恒惕的围剿，胡耀邦等人在革命武装的掩护下突围前往中央驻地，而胡耀邦因此留在青年部担任干事。1933年8月，升任青年部部长、兼任宣传部部长。9月正式加入中国工团党。\n\n如今他正式肩负起领导全中国政府的重任，稳定、和平、温和将是他执政的方针。"
  Kang_Shen_DESC:0 "康生，原名张宗可，字少卿（绍卿），生于山东省胶州大台庄当地的一个名门望族，先祖张若獬，崇祯七年进士，南京户部主事，祖父张鸿仪曾为贡生。由于其出生于书香世家，由幼年时代便开始接触文艺作品，因此擅长书法绘画。1924年，张宗可赴上海大学学习，并改名张溶。在大学学习时，担任上海总工会干事、上海大学特支书记。1927年大革命失败后，张宗可出逃海外，在法国的第三国际总部进修。但是在此期间张宗可逐步接受到俄国的布尔什维克思想与英国莫斯利发起的准则派运动的感染，他私下为自己取名康斯坦丁（Константи́н），其中文音译为康生。同样在流亡法国时期，康生被吸纳进入了周恩来领导的特科中，他也假装是中裔俄国人重新回到上海加入革命事业中，在特科的时日内由于其出色的能力，他成功晋升到了特科副手，兼行动科长的地位。"
  POLITICS_HNN_LIN_BIAO_DESC:0 "林彪出生于殷实的商人家庭，青年时期，他就见证了父亲的生意因军阀剥削而陷入困顿。他成为了一名左翼活动家，参加过各种学生罢课与抗议活动，后逃往南方投考新设立的黄埔军校。\n\n作为一名年轻学员，林彪钦佩校长蒋介石的气质。他在校内表现优异，后参与北伐，几个月就从见习排长晋升到营长。北伐失败后，他仍然追随叶挺，与国民革命军残余的大部队转入地下打游击。正是在闽赣的群山之中，林彪这个名字变得越来越响亮了。但也正是在闽赣他接受到了来自另一个革命根据地——湖南三省边界根据地传播的工团思想。尽管他对这些思想并没有太大兴趣，但他对这些人实际实现的布尔什维克制度更感兴趣，他在其中看到了一条有别于现在中国大多数革命者的“新”的道路。"
  POLITICS_HNN_HE_LONG_DESC:0 "贺龙在贫苦农家中出生长大，从小没怎么受过正规的教育。贺龙的父亲是名清朝小吏，颇有番武力，这些才能在贺龙身上也有所体现。20岁时，贺龙的叔叔因欠债被税吏活活打死，而贺龙一气之下直接杀掉了税吏，从此开始了他那漫长的游击斗争生涯。1920年，国民党异军突起，此时贺龙劫富济贫的法外好汉的名气越传越远，他带着爱刀一人一刀组建了一支地方部队。北伐期间，贺龙在张发奎手下担任教官与指挥官的角色，也在党内找到了自己的归宿——社会主义。北伐的失败并没有浇灭贺龙渴望祖国变革的热情，虽然他被迫退回老家湖南省，但是在湖南他和彭德怀一同为工团主义者的活动提供庇护。"
@@ -1162,9 +1165,11 @@
  HNN_Tan_Zhen_Lin: "谭震林"
  POLITICS_HNN_TAN_ZHEN_LIN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1902年4月24日，大清帝国 湖南省 攸县§!\n§Y军旅生涯：§!§g谭震林生于湖南省攸县城关镇。1911年入私塾学习。两年后，在书纸店当学徒。20年代初期，在攸县、茶陵组织发动两次工人斗争。1926年加入中国工团党，先后担任攸县工人纠察队长，县总工会宣传干事，县党部工农运动特派员。大革命失败后，前往三省边界与董必武等人建立的革命武装会和。"
  HNN_Yuan_Wen_Cai: "袁文才"
- POLITICS_HNN_YUAN_WEN_CAI_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1898年10月，大清帝国 江西省 宁冈县§!\n§Y军旅生涯：§!§g袁文才原是江西宁冈土匪组织“马刀会”的领导人之一，1926年受国民政府招安改编成为宁冈县保卫团，袁文才担任团总。9月受宁冈工团党组织人龙超清的游说发动暴动策应国民革命军北伐，同年11月加入工团党。大革命失败后，袁文才率领所部继续回到宁冈做土匪武装，直到接到董必武送来的信件后，前往董必武挥下。1928年2月，袁文才部改编为工农革命军第1军第1师第2团，袁文才任团长。"
+ POLITICS_HNN_YUAN_WEN_CAI_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1898年10月，大清帝国 江西省 宁冈县§!\n§Y军旅生涯：§!§g袁文才，原名袁选三。原是江西宁冈土匪组织“马刀会”的领导人之一，1926年受国民政府招安改编成为宁冈县保卫团，袁文才担任团总。9月受宁冈工团党组织人龙超清的游说发动暴动策应国民革命军北伐，同年11月加入工团党。大革命失败后，袁文才率领所部继续回到宁冈做土匪武装，直到接到董必武送来的信件后，前往董必武挥下。但是由于出身问题，其在根据地内长期出于非中心地位。"
  HNN_Long_Chao_Qing: "龙超清"
  POLITICS_HNN_LONG_CHAO_QING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年，大清帝国 江西省 宁冈县§!\n§Y军旅生涯：§!§g龙超清，又名龙济明、龙济民。龙超清出生于仕宦家庭，其父龙钦海为留日学者，曾任江西省参议会议长、教育厅厅长等职，思想开明，支持进步活动。受家庭熏陶，龙超清自幼接受良好教育，1921年考入南昌省立第二中学，期间接触《中国青年》《向导》等进步刊物，参与反帝反军阀斗争。1925年秋，经萧国华介绍加入中国工团党，投身革命。1926年，龙超清受党组织派遣，以国民党特派员身份返回宁冈，秘密筹建革命力量。他联合当地绿林武装首领袁文才的“马刀队”，将其改编为“宁冈县保卫团”，并策划发动“宁冈起义”，推翻当地政府，成立以自己为主席的“宁冈县人民委员会”。同年北伐战争溃败后，董必武等人流亡湖南组织新的革命，龙超清作为地方党组织代表，主动联络将袁文才部归纳重新入党。但在革命工作中龙超清却和袁文才产生间隙，直到党组织介入调和，尽管二人握手言和，但是始终无法回到从前。"
+ HNN_Wan_Dan_Ping: "宛旦平"
+ POLITICS_HNN_Wan_Dan_Ping_DESC:0 "§Y指挥官介绍\n生于：§!§g1900年；大清帝国、湖南省新宁县§!\n§Y军旅生涯：§!§g1922年秋考入长沙岳云中学，参加学生爱国运动，结识毛泽东、何叔衡、夏明翰等人。1924年加入中国工团党。同年秋考入广州黄埔军官学校第二期，学习刻苦，成绩优异。1925年2月参加第一次讨伐军阀陈炯明的东征作战。3月初同卢德铭一起调往海丰县帮助组织训练农民自卫军。9月毕业后被分配到国民革命军第一军，任参谋。1926年秋参加北伐战争。大革命中兵败被俘，转押于长沙监狱，后被其兄保释出狱。在其出狱后，与长沙地下工作者毛泽东搭上线，随后前往工团党湖南革命根据地重新投身革命事业。§!"
  HNN_Wan_Xi_Xian: "宛希先"
  POLITICS_HNN_LONG_CHAO_QING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1906年，大清帝国 湖北省 黄梅县§!\n§Y军旅生涯：§!§g宛希先"
  HNN_Hua_Guofeng: "华国锋"
@@ -1176,6 +1181,7 @@
  HNN_wang_gan_chang: "王淦昌"
  HNN_zhao_jiu_zhang: "赵九章"
  HNN_guo_yong_huai: "郭永怀"
+ HNN_luo_pei_lin: "罗沛霖"
 
  HNN_shibaidegeming_tooltip:0 "我们将欢迎我们曾经的同志的到来"
  HNN_revolutionary_army_tt:0 "§Y湖南农工将被动员起来组成§!§R一支革命军事力量§!"
